--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。《更多的合成》<span style="color:red">无明确的主题</span>，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m01d22(魔法更新)，支持Minecraft Java版 1.14。</p>
+<p>最新版本为测试版v1.9-m01d25(魔法更新)，支持Minecraft Java版 1.14。</p>
 
 
 <h3 id="how_to_start">📦 如何开始</h3>
@@ -68,10 +68,10 @@
 <table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th>下载地址</th><th>更新日志</th></tr></thead>
 <tbody>
 <tr>
-	<td>Minecraft Java版 19w03a</td>
-	<td>Crafting++ 1.9测试版m01d22</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m01d22.zip">github</a>
-      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m01d22.zip">官方</a></td>
+	<td>Minecraft Java版 19w04a</td>
+	<td>Crafting++ 1.9测试版m01d25</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m01d25.zip">github</a>
+      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m01d25.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
@@ -113,8 +113,8 @@
 <p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree 折君 天狼星black 匠魂 Gingerbread MC先生</p>
 <p><span style="font-weight:bold;">服务器支持</span>：HerobrineXia SorrowRain 苹果果</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
-<p><span style="font-weight:bold;">赞助名单</span>：墨鱼 火星浮云 倪采臣 SPGoding ustc_zzzz 苹果果 落天望月 chyx switefaster</p>
-<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、盐等模组以及Bilibili与Youtube一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a>等小组以及<a href="http://www.mcbbs.net/?1963599">pineapple_</a>、<a href="http://www.mcbbs.net/?160123">贰逼</a>、ECS、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?582040">chyx</a>、<a href="https://github.com/ustc-zzzz">zzzz_ustc</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>、<a href="https://github.com/switefaster">switefaster</a>、折君、<a href="http://www.mcbbs.net/?725858">⊙v⊙</a>、Herobrinexia等玩家亦对此模组有贡献。</p>
+<p><span style="font-weight:bold;">赞助名单</span>：明月庄主 墨鱼 火星浮云 倪采臣 SPGoding ustc_zzzz 苹果果 落天望月 chyx switefaster</p>
+<p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、盐等模组以及Bilibili与Youtube一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a>等小组以及<a href="http://www.mcbbs.net/?1963599">pineapple_</a>、<a href="http://www.mcbbs.net/?160123">贰逼</a>、ECS、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?582040">chyx</a>、<a href="https://github.com/ustc-zzzz">zzzz_ustc</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>、<a href="https://github.com/switefaster">switefaster</a>、折君、<a href="http://www.mcbbs.net/?725858">⊙v⊙</a>、Herobrinexia、Amber等玩家亦对此模组有贡献。</p>
 <p style="color:red;">感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
 <!------------------------------------------------------------------------------------------------->
@@ -5275,7 +5275,7 @@
 </tbody></table>
 
 <h3 id="stairs">楼梯 (Stairs)</h3>
-<p>新增17种楼梯回收为原方块。</p>
+<p>新增17种楼梯回收为原方块。现在可使用切石机切割木板制作楼梯。</p>
 
 <table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>相应方块</th><td>任意楼梯</td>
@@ -5289,12 +5289,12 @@
 <span class="empty"></span>
 <span class="empty"></span>
 <span class="empty"></span>
-<span class="sandstone" title="相应方块"><span class="stack">6</span></span>
+<span class="sandstone" title="相应方块"><span class="stack">4</span></span>
 </span></td></tr>
 </tbody></table>
 
 <h3 id="slabs">台阶 (Slabs)</h3>
-<p>新增18种台阶回收为原方块。</p>
+<p>新增18种台阶回收为原方块。现在可使用切石机切割木板制作台阶。</p>
 <table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>相应方块</th><td>任意台阶</td>
 <td><span class="ui ct" title="工作台">
@@ -5935,7 +5935,7 @@ scoreboard players set #rituals_time cppValue 1200
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-01-12</p>
+<p>最后更新 2019-01-25</p>
 </footer>
 </article>
 </body></html>
