--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。《更多的合成》<span style="color:red">无明确的主题</span>，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m01d25(魔法更新)，支持Minecraft Java版 1.14。</p>
+<p>最新版本为测试版v1.9-m01d27(魔法更新)，支持Minecraft Java版 1.14。</p>
 
 
 <h3 id="how_to_start">📦 如何开始</h3>
@@ -69,9 +69,9 @@
 <tbody>
 <tr>
 	<td>Minecraft Java版 19w04a</td>
-	<td>Crafting++ 1.9测试版m01d25</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m01d25.zip">github</a>
-      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m01d25.zip">官方</a></td>
+	<td>Crafting++ 1.9测试版m01d27</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m01d27.zip">github</a>
+      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m01d27.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
@@ -190,7 +190,7 @@
 
 <tr><th>掉落物</th><td>
   <a href="#wing_of_sky"><span class="ci" style="background-position: -96px -16px;"></span>天空之翼</a> 
-· <a href="#heart_of_ocean"><span class="ci" style="background-position: -112px -16px;"></span>海洋之心</a> 
+· <a href="#heart_of_ocean"><span class="ci" style="background-position: -112px -16px;"></span>水晶之心</a> 
 · <a href="#limb_of_ridge"><span class="ci" style="background-position: -128px -16px;"></span>山脉之肢</a> 
 · <a href="#soul_of_dirt"><span class="ci" style="background-position: -0px -32px;"></span>泥土之魂</a> 
 · <a href="#certification_of_earth"><span class="ci" style="background-position: -16px -32px;"></span>居民之证</a> 
@@ -520,7 +520,7 @@
 <img style="height:250px" src="items/screenshots/chicken_roost.png" />
 
 <h3 id="fishing">钓鱼</h3>
-<p>有几率掉到宝藏湿海绵、鳕鱼头/鲑鱼头/热带鱼头/河豚头、<a href="#heart_of_ocean">海洋之心</a>和垃圾火药/海晶碎片。</p>
+<p>有几率掉到宝藏湿海绵、鳕鱼头/鲑鱼头/热带鱼头/河豚头、<a href="#heart_of_ocean">水晶之心</a>和垃圾火药/海晶碎片。</p>
 
 
 <!-------------------------------------------------------------------------------------------------->
@@ -1136,7 +1136,7 @@
 <p>主手持有右击<a href="#all_in_one_machine">多功能一体机</a>安装。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>低温插件</th>
-<td><a href="#experience_bottle">附魔之瓶</a>+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#enchanted_gold">附魔金锭</a>+<a href="#empty_plugin">空白插件</a>+雪块+<a href="#heart_of_ocean">海洋之心</a></td>
+<td><a href="#experience_bottle">附魔之瓶</a>+<a href="#enchanted_diamond">附魔钻石</a>+<a href="#enchanted_gold">附魔金锭</a>+<a href="#empty_plugin">空白插件</a>+雪块+<a href="#heart_of_ocean">水晶之心</a></td>
 <td><span class="ui cm" title="合成器">
 <span class="experience_bottle" title="附魔之瓶"></span>
 <span class="ci enchanted_diamond" title="附魔钻石"></span>
@@ -1145,7 +1145,7 @@
 <span class="ci empty_plugin" title="空白插件"></span>
 <span class="ci enchanted_gold" title="附魔金锭"></span>
 <span class="snow_block" title="雪块"></span>
-<span class="ci heart_of_ocean" title="海洋之心"></span>
+<span class="ci heart_of_ocean" title="水晶之心"></span>
 <span class="snow_block" title="雪块"></span>
 <span class="ci low_temperature_plugin" title="低温插件"></span>
 </span></td></tr>
@@ -1285,7 +1285,7 @@
 <p>可用于合成<a href="#low_pressure_plugin">低压插件</a>、<a href="#blue_force_of_sky">蓝色天之力</a>、<a href="#origin_of_the_world">世界之源</a>、<a href="#shooting_star">流星丸。</a></p>
 <p>可用于<a href="#rituals">仪式</a>的附魔书制作、效果附加和属性附加。</p>
 
-<h3 id="heart_of_ocean">海洋之心 (Heart of Ocean)</h3>
+<h3 id="heart_of_ocean">水晶之心 (Heart of Crystal)</h3>
 <span class="ui single"><span class="ci heart_of_ocean"></span></span>
 <p>溺尸/远古守卫者/守卫者/鱿鱼/海龟/海豚/鱼被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。钓鱼亦有几率获得。</p>
 <p>可用于合成<a href="#low_temperature_plugin">低温插件</a>、<a href="#green_force_of_water">绿色水之力 </a>。</p>
@@ -2523,13 +2523,13 @@
 <p>用于<a href="#all_in_one_machine">多功能一体机</a>低温高压下将水瓶变为冰，低温低压下将水瓶变为雪块。</p>
 <p class="small">所指的方块不可被火把、栅栏等不完整方块阻挡，下同。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><th>绿色水之力</th><td>绿色染料+红石+<a href="#heart_of_ocean">海洋之心</a></td>
+<tr><th>绿色水之力</th><td>绿色染料+红石+<a href="#heart_of_ocean">水晶之心</a></td>
 <td><span class="ui cm" title="合成器">
 <span class="green_dye" title="绿色染料"></span>
 <span class="redstone" title="红石"></span>
 <span class="green_dye" title="绿色染料"></span>
 <span class="redstone" title="红石"></span>
-<span class="ci heart_of_ocean" title="海洋之心"></span>
+<span class="ci heart_of_ocean" title="水晶之心"></span>
 <span class="redstone" title="红石"></span>
 <span class="green_dye" title="绿色染料"></span>
 <span class="redstone" title="红石"></span>
@@ -4050,7 +4050,7 @@
 </tr>
 <tr>
 	<td><strong id="potion_of_ocean">海洋药水 (Potion of Ocean)</strong></td>
-	<td><a href="#heart_of_ocean">海洋之心</a></td>
+	<td><a href="#heart_of_ocean">水晶之心</a></td>
 	<th class="lore">水下呼吸 3:00<br/>潮涌能量 1:30</th>
 	<th class="lore">水下呼吸 8:00<br/>潮涌能量 4:00</th>
 	<th>-</th>
@@ -5919,10 +5919,15 @@ scoreboard players set #rituals_time cppValue 1200
 <!------------------------------------------------------------------------------------------------>
 <h2 id="changelog">更新日志</h2>
 <p>模组版本：1.9(魔法更新)</p><p>更新时间：2019年待定</p><p>模组大小：3908 KB</p><p>更新内容：</p><ul>
-<li>游戏本体版本升级为1.14，不再支持1.14之前的版本。</li><li>新增并修改材质。</li><li>新增使用指令/loot give @s loot cpp:物品英文名可获取相应物品。</li><li>新增附魔室的物品要塞地图、地牢地图。</li><li>新增附魔室生成幻术师。</li><li>新增自然生成农作物。</li><li>新增自然生成花草。</li><li>新增自然生成水果树和矿石树。</li><li>现在死亡的云杉仅在针叶林及其变种生物群系内生成。</li><li>现在死珊瑚扇仅在沙漠和恶地及其变种生物群系内生成。</li><li>修改了骷髅和僵尸的盔甲、武器算法和几率。</li><li>修改了高压爬行者的几率。</li><li>新增对凋零骷髅的加强。</li><li>新增部分生物的稀有掉落物。</li><li>修改肉类名称。</li><li>新增玩家死亡掉落头。</li><li>鸡死亡掉落鸡蛋数受抢夺加成上限从1调整为0.5。</li><li>新增森林蝙蝠掉落香橼。</li><li>绿宝石块吸引村民支持副手。</li><li>修改所有配方中的染料为1.14的相应染料。</li><li>修改花合成染料为烧炼。</li><li>烧炼配方现在支持高炉、烟熏炉和营火。</li><li>新增信标增强器可选择敌对/全部生物。</li><li>新增多功能一体机常温常压模式制作竹子。</li><li>修改多功能一体机常温高压下部分产物几率和数量。</li><li>移除多功能一体机常温高压下压缩功能。</li><li>修改生物投影仪的豹猫为猫。</li><li>修改生物投影仪材质，可以显示正在生成的生物。</li><li>修改除信标增强器外的机器所在方块为木桶。</li><li>新增碎钻，烧炼矿石制品得到，可合成钻石。</li><li>新增煤粒，煤炭或木炭分解得到。</li><li>修复粗硅的错误名称。</li><li>修改矿石粉为只需要/只能烧炼出1个矿物。</li><li>修改月之碎片合成配方中的附魔金苹果为粘液球。</li><li>新增4个月之碎片和末影之眼合成日之碎片。</li><li>新增4个日之碎片和下界之星合成2下界之星。</li><li>新增月石，使用9月之碎片合成，可分解。</li><li>新增日石，使用9日之碎片合成，可分解。</li><li>移除神秘烈焰粉和神秘兔子脚。</li><li>修改草方块的合成配方为8草丛加泥土。</li><li>修改菌丝的合成配方为4棕色蘑菇、4红色蘑菇加泥土。</li><li>修改皮革和兔子皮的比例恢复为1:4。</li><li>修改石英块和石英的比例恢复为1:4。</li><li>修改合成珊瑚块所需珊瑚个数为4。</li><li>新增热带鱼类别的翻译。</li><li>修改热带鱼桶的合成配方。</li><li>移除彩色床加染料合成彩色床的配方。</li><li>修改蓝色天之力为可根据当前天气调节。</li><li>修改白色电之力的功能为消耗6点生命值恢复10点魔力值。</li><li>新增剪枝器，2木棍和附魔铁锭合成，破坏树叶得到树苗。</li><li>新增玻璃镐，可破坏玻璃。</li><li>新增鸡窝，使用5小麦合成，破坏后无掉落。</li><li>鸡将要下蛋时会寻找附近的鸡窝，如果没有则会创建一个。</li><li>鸡必须有鸡窝才能下蛋。</li><li>调整了傀儡农民和傀儡矿工的功能。</li><li>新增中国国旗，使用牡丹、焰光菊、金盏花和红色旗帜合成得到。</li><li>新增美国国旗，使用玫瑰丛、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增俄罗斯国旗，使用向日葵、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增英国国旗，使用虞美人、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增法国国旗，使用矢车菊、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增bilibili标志，使用黑荆棘、白车轴、芦苇草和画合成得到。</li><li>新增github标志，使用黑荆棘、白车轴、香蒲草和画合成得到。</li><li>新增mcmod标志，使用黑荆棘、白车轴、异绒兰和画合成得到。</li><li>新增tcp标志，使用黑荆棘、白车轴、紫荆花和画合成得到。</li><li>新增cbl标志，使用黑荆棘、白车轴、风信子和画合成得到。</li><li>新增盾牌和国旗或标志合成相应图案的盾牌。</li><li>新增食物饥饿值显示。</li><li>新增煮鸡蛋代替鸡蛋羹，恢复2点饥饿值。</li><li>修改土豆牛肉、土豆排骨、兔肉煲效果为力量I。</li><li>修改土豆牛肉等食物为无序合成。</li><li>修改炸鱼薯条的配方为盐瓶、熟鳕鱼、烤马铃薯、番茄酱和碗。</li><li>修改肉松面包的配方为盐瓶、小麦和熟鸡肉或熟鹦鹉肉。</li><li>新增番茄酱，使用西红柿、糖和盐瓶合成，恢复5点饥饿值。</li><li>新增奶酪，使用牛奶桶和柠檬无序合成，恢复5点饥饿值。</li><li>新增汉堡，使用番茄酱、奶酪、西红柿、牛排和面包无序合成，恢复20点饥饿值。</li><li>新增披萨，使用番茄酱、奶酪、西红柿、熟猪排和小麦无序合成，恢复5点饥饿值。</li><li>新增寿司，使用干海带、小麦和生鲑鱼无序合成，恢复5点饥饿值。</li><li>新增仰望星空派，使用熟鳕鱼、熟猪排、棕色蘑菇和小麦合成，恢复16点饥饿值。</li><li>新增烤鸡，使用熟鸡肉、柠檬和烤马铃薯合成，恢复16点饥饿值。</li><li>新增饺子，使用熟猪排或熟牛排和8小麦合成得到4个，恢复5点饥饿值。</li><li>新增25种可食用的水果。</li><li>新增葡萄干，烧炼葡萄/金葡萄得到，食用后获得10秒速度。</li><li>现在冷饮可恢复5点魔力值。</li><li>新增稀有掉落物可用于酿造。</li><li>修改连锁算法，现在只破坏镐子可挖掘的方块了。</li><li>新增花草替代作物，成熟后破坏得到花草。</li><li>新增花草烧炼成对应物。</li><li>新增花草合成为3个对应种子。</li><li>修改羊毛树掉落羊毛树树苗、鱼和羊。</li><li>移除水果树树苗、矿石树树苗、羊毛树树苗的合成配方。</li><li>新增圣诞花，使用虞美人、彼岸花、金盏花和碎璃草无序合成。</li><li>新增圣诞树，使用4荧石粉、2雪球、2圣诞花和云杉树苗合成。</li><li>现在漂浮时可按下shift下降。</li><li>修改扫帚和流星丸需要跳跃才可漂浮，移除主手效果。</li><li>新增魔法，包括召唤术：风火雷雨灵，催化术：风火雷雨灵地。</li><li>若要使用魔法，玩家需要副手持有魔杖，然后按下对应的键，最后双击F发动，玩家需要拥有足够的魔法值方可。</li><li>新增出生点附近生成魔导石，每秒恢复32米内玩家1点魔法值，上限30点。</li><li>新增4级星标上的信标增强仪每秒恢复64米内玩家1点魔法值，上限60点。</li><li>新增4级星标上的信标增强仪，若顶层基座使用5日石和4月石，每秒恢复128米内玩家1点魔法值，上限100点。</li><li>现在头饰可直接佩戴。</li><li>新增紫色美瞳，戴上后显示玩家附近的野生花草。</li><li>新增花环每10秒恢复玩家1点魔法值，上限30点。</li><li>新增原谅帽每10秒恢复玩家1点魔法值，上限60点。</li><li>新增冕旒每10秒恢复玩家1点魔法值，上限100点。</li><li>新增烈焰红唇、愚弄眼镜、小黄人眼罩。</li><li>新增经典画作，使用羽毛、黑色染料和画无序合成。</li><li>将经典画作放置在物品展示框上，会随机显示33种画的一种。</li><li>新增彩色告示牌。</li><li>新增玻璃物品展示框，使用玻璃板和8个木棍合成。放入物品后变透明。</li><li>修改合成楼梯数量为4个，楼梯回收为4个。</li>
+<li>游戏本体版本升级为1.14，不再支持1.14之前的版本。</li><li>新增并修改材质。</li><li>新增使用指令/loot give @s loot cpp:物品英文名可获取相应物品。</li><li>新增附魔室的物品要塞地图、地牢地图。</li><li>新增附魔室生成幻术师。</li><li>新增自然生成农作物。</li><li>新增自然生成花草。</li><li>新增自然生成水果树和矿石树。</li><li>现在死亡的云杉仅在针叶林及其变种生物群系内生成。</li><li>现在死珊瑚扇仅在沙漠和恶地及其变种生物群系内生成。</li><li>修改了骷髅和僵尸的盔甲、武器算法和几率。</li><li>修改了高压爬行者的几率。</li><li>新增对凋零骷髅的加强。</li><li>新增部分生物的稀有掉落物。</li><li>修改肉类名称。</li><li>新增玩家死亡掉落头。</li><li>鸡死亡掉落鸡蛋数受抢夺加成上限从1调整为0.5。</li>
+<li>新增森林蝙蝠掉落香橼。</li>
+<li>现在豹猫不再掉落猫头。</li>
+<li>现在猫/熊猫/海龟有几率掉落头。</li><li>绿宝石块吸引村民支持副手。</li><li>修改所有配方中的染料为1.14的相应染料。</li><li>修改花合成染料为烧炼。</li><li>烧炼配方现在支持高炉、烟熏炉和营火。</li><li>新增信标增强器可选择敌对/全部生物。</li><li>新增多功能一体机常温常压模式制作竹子。</li><li>修改多功能一体机常温高压下部分产物几率和数量。</li><li>移除多功能一体机常温高压下压缩功能。</li><li>修改生物投影仪的豹猫为猫。</li><li>修改生物投影仪材质，可以显示正在生成的生物。</li><li>修改除信标增强器外的机器所在方块为木桶。</li><li>新增碎钻，烧炼矿石制品得到，可合成钻石。</li><li>新增煤粒，煤炭或木炭分解得到。</li><li>修复粗硅的错误名称。</li><li>修改矿石粉为只需要/只能烧炼出1个矿物。</li><li>修改月之碎片合成配方中的附魔金苹果为粘液球。</li><li>新增4个月之碎片和末影之眼合成日之碎片。</li><li>新增4个日之碎片和下界之星合成2下界之星。</li><li>新增月石，使用9月之碎片合成，可分解。</li><li>新增日石，使用9日之碎片合成，可分解。</li><li>移除神秘烈焰粉和神秘兔子脚。</li><li>修改草方块的合成配方为8草丛加泥土。</li><li>修改菌丝的合成配方为4棕色蘑菇、4红色蘑菇加泥土。</li><li>修改皮革和兔子皮的比例恢复为1:4。</li><li>修改石英块和石英的比例恢复为1:4。</li><li>修改合成珊瑚块所需珊瑚个数为4。</li><li>新增热带鱼类别的翻译。</li><li>修改热带鱼桶的合成配方。</li><li>移除彩色床加染料合成彩色床的配方。</li><li>修改蓝色天之力为可根据当前天气调节。</li><li>修改白色电之力的功能为消耗6点生命值恢复10点魔力值。</li><li>新增剪枝器，2木棍和附魔铁锭合成，破坏树叶得到树苗。</li><li>新增玻璃镐，可破坏玻璃。</li><li>新增鸡窝，使用5小麦合成，破坏后无掉落。</li><li>鸡将要下蛋时会寻找附近的鸡窝，如果没有则会创建一个。</li><li>鸡必须有鸡窝才能下蛋。</li><li>调整了傀儡农民和傀儡矿工的功能。</li><li>新增中国国旗，使用牡丹、焰光菊、金盏花和红色旗帜合成得到。</li><li>新增美国国旗，使用玫瑰丛、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增俄罗斯国旗，使用向日葵、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增英国国旗，使用虞美人、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增法国国旗，使用矢车菊、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增bilibili标志，使用黑荆棘、白车轴、芦苇草和画合成得到。</li><li>新增github标志，使用黑荆棘、白车轴、香蒲草和画合成得到。</li><li>新增mcmod标志，使用黑荆棘、白车轴、异绒兰和画合成得到。</li><li>新增tcp标志，使用黑荆棘、白车轴、紫荆花和画合成得到。</li><li>新增cbl标志，使用黑荆棘、白车轴、风信子和画合成得到。</li><li>新增盾牌和国旗或标志合成相应图案的盾牌。</li><li>新增食物饥饿值显示。</li><li>新增煮鸡蛋代替鸡蛋羹，恢复2点饥饿值。</li><li>修改土豆牛肉、土豆排骨、兔肉煲效果为力量I。</li><li>修改土豆牛肉等食物为无序合成。</li><li>修改炸鱼薯条的配方为盐瓶、熟鳕鱼、烤马铃薯、番茄酱和碗。</li><li>修改肉松面包的配方为盐瓶、小麦和熟鸡肉或熟鹦鹉肉。</li><li>新增番茄酱，使用西红柿、糖和盐瓶合成，恢复5点饥饿值。</li><li>新增奶酪，使用牛奶桶和柠檬无序合成，恢复5点饥饿值。</li><li>新增汉堡，使用番茄酱、奶酪、西红柿、牛排和面包无序合成，恢复20点饥饿值。</li><li>新增披萨，使用番茄酱、奶酪、西红柿、熟猪排和小麦无序合成，恢复5点饥饿值。</li><li>新增寿司，使用干海带、小麦和生鲑鱼无序合成，恢复5点饥饿值。</li><li>新增仰望星空派，使用熟鳕鱼、熟猪排、棕色蘑菇和小麦合成，恢复16点饥饿值。</li><li>新增烤鸡，使用熟鸡肉、柠檬和烤马铃薯合成，恢复16点饥饿值。</li><li>新增饺子，使用熟猪排或熟牛排和8小麦合成得到4个，恢复5点饥饿值。</li><li>新增25种可食用的水果。</li><li>新增葡萄干，烧炼葡萄/金葡萄得到，食用后获得10秒速度。</li><li>现在冷饮可恢复5点魔力值。</li><li>新增稀有掉落物可用于酿造。</li><li>修改连锁算法，现在只破坏镐子可挖掘的方块了。</li><li>新增花草替代作物，成熟后破坏得到花草。</li><li>新增花草烧炼成对应物。</li><li>新增花草合成为3个对应种子。</li><li>修改羊毛树掉落羊毛树树苗、鱼和羊。</li><li>移除水果树树苗、矿石树树苗、羊毛树树苗的合成配方。</li><li>新增圣诞花，使用虞美人、彼岸花、金盏花和碎璃草无序合成。</li><li>新增圣诞树，使用4荧石粉、2雪球、2圣诞花和云杉树苗合成。</li><li>现在漂浮时可按下shift下降。</li><li>修改扫帚和流星丸需要跳跃才可漂浮，移除主手效果。</li><li>新增魔法，包括召唤术：风火雷雨灵，催化术：风火雷雨灵地。</li><li>若要使用魔法，玩家需要副手持有魔杖，然后按下对应的键，最后双击F发动，玩家需要拥有足够的魔法值方可。</li><li>新增出生点附近生成魔导石，每秒恢复32米内玩家1点魔法值，上限30点。</li><li>新增4级星标上的信标增强仪每秒恢复64米内玩家1点魔法值，上限60点。</li><li>新增4级星标上的信标增强仪，若顶层基座使用5日石和4月石，每秒恢复128米内玩家1点魔法值，上限100点。</li><li>现在头饰可直接佩戴。</li><li>新增紫色美瞳，戴上后显示玩家附近的野生花草。</li><li>新增花环每10秒恢复玩家1点魔法值，上限30点。</li><li>新增原谅帽每10秒恢复玩家1点魔法值，上限60点。</li><li>新增冕旒每10秒恢复玩家1点魔法值，上限100点。</li><li>新增烈焰红唇、愚弄眼镜、小黄人眼罩。</li><li>新增经典画作，使用羽毛、黑色染料和画无序合成。</li><li>将经典画作放置在物品展示框上，会随机显示33种画的一种。</li><li>新增彩色告示牌。</li><li>新增玻璃物品展示框，使用玻璃板和8个木棍合成。放入物品后变透明。</li><li>修改合成楼梯数量为4个，楼梯回收为4个。</li>
 <li>现在可使用切石机切割木板。</li>
 <li>移除平滑方块的合成和加速效果。</li><li>将实用功能部分分离为发射器种植、下界干燥湿海绵、复合台阶、随机方块、箱子排序、炼药锅功能。</li><li>新增炼药锅漂白羊毛、床、粘性活塞。</li><li>修改了随机方块功能为：副手持有潜影箱而主手为空时，将会从潜影箱随机选择一个给予玩家。</li><li>修改箱子排序为只需主手或副手持有木棍即可。</li><li>修改箱子排序算法，现在支持大箱子且可以满槽位。</li><li>移除竖台阶，修改墙名称为竖台阶和模型。</li>
-<li>现在复合台阶拥有完整碰撞箱且破坏后全部掉落。</li><li>修改双台阶模型材质为竖纹。</li><li>修改末影龙掉落龙蛋方块而不是龙头。</li><li>修改村民代码以支持1.14。</li><li>为村民出售的食物添加了饱食度显示。</li><li>制图师现在可以出售各种结构的地图了，使用月之碎片购买。与所在维度有关，若无相应结构则无效。</li><li>修改了tcp的logo。</li><li>新增空岛8草丛加泥土合成草方块。</li><li>新增空岛4棕色蘑菇、4红色蘑菇加泥土合成菌丝。</li><li>新增方块破坏器下方的伸出的活塞臂收回时，会自动破坏其上方的方块。</li><li>新增空岛初始物资箱子、泥土、树苗、16骨粉。</li><li>新增空岛雪球加4树苗或作物或树叶合成泥土。</li><li>新增空岛合成烈焰棒。</li><li>新增空岛玩家杀死生物时背包的沙子会变成灵魂沙。</li><li>新增粉碎机粉碎泥土有几率掉落草丛。</li><li>新增粉碎机粉碎沙子有几率掉落枯萎的灌木。</li><li>新增粉碎机粉碎泥土有几率掉落水果树树苗、矿石树树苗、羊毛树树苗、竹子。</li><li>新增空岛破坏草丛掉落甜浆果。</li><li>修改空岛破坏草丛掉落种子而不是使用粉碎机粉碎泥土。</li><li>修改空岛破坏枯萎的灌木掉落种子而不是使用粉碎机粉碎沙子。</li><li>修改粉碎机粉碎圆石变为沙子。</li><li>修改粉碎机粉碎石头变为砂砾。</li><li>移除空岛无限草方块。</li><li>移除空岛合成砂砾的配方。</li><li>移除空岛石头合成炼药锅。</li><li>新增粉碎机粉碎泥土有几率掉落竹子。</li><li>新增空岛破坏草丛掉落甜浆果。</li><li>新增空岛破坏海草有几率掉落海带。</li>
+<li>现在复合台阶拥有完整碰撞箱且破坏后全部掉落。</li><li>修改双台阶模型材质为竖纹。</li><li>修改末影龙掉落龙蛋方块而不是龙头。</li><li>修改村民代码以支持1.14。</li><li>为村民出售的食物添加了饱食度显示。</li><li>制图师现在可以出售各种结构的地图了，使用月之碎片购买。与所在维度有关，若无相应结构则无效。</li><li>修改了tcp的logo。</li>
+<li>现在空岛模式下不会生成模组结构。</li>
+<li>新增空岛8草丛加泥土合成草方块。</li><li>新增空岛4棕色蘑菇、4红色蘑菇加泥土合成菌丝。</li><li>新增方块破坏器下方的伸出的活塞臂收回时，会自动破坏其上方的方块。</li><li>新增空岛初始物资箱子、泥土、树苗、16骨粉。</li><li>新增空岛雪球加4树苗或作物或树叶合成泥土。</li><li>新增空岛合成烈焰棒。</li><li>新增空岛玩家杀死生物时背包的沙子会变成灵魂沙。</li><li>新增粉碎机粉碎泥土有几率掉落草丛。</li><li>新增粉碎机粉碎沙子有几率掉落枯萎的灌木。</li><li>新增粉碎机粉碎泥土有几率掉落水果树树苗、矿石树树苗、羊毛树树苗、竹子。</li><li>新增空岛破坏草丛掉落甜浆果。</li><li>修改空岛破坏草丛掉落种子而不是使用粉碎机粉碎泥土。</li><li>修改空岛破坏枯萎的灌木掉落种子而不是使用粉碎机粉碎沙子。</li><li>修改粉碎机粉碎圆石变为沙子。</li><li>修改粉碎机粉碎石头变为砂砾。</li><li>移除空岛无限草方块。</li><li>移除空岛合成砂砾的配方。</li><li>移除空岛石头合成炼药锅。</li><li>新增粉碎机粉碎泥土有几率掉落竹子。</li><li>新增空岛破坏草丛掉落甜浆果。</li><li>新增空岛破坏海草有几率掉落海带。</li>
 </ul>
 
 <footer>
@@ -5937,7 +5942,7 @@ scoreboard players set #rituals_time cppValue 1200
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-01-25</p>
+<p>最后更新 2019-01-27</p>
 </footer>
 </article>
 </body></html>
