--- a/index.html
+++ b/index.html
@@ -744,40 +744,44 @@
 		<span class="ui slot"><span class="melon" title="西瓜"><span class="stack">8</span></span></span>
 		<span class="ui slot"><span class="book" title="书"><span class="stack">8</span></span></span>
 		<span class="ui slot"><span class="gold_ingot" title="金锭"><span class="stack">8</span></span></span>
-		<br />
 		<span class="ui slot"><span class="iron_ingot" title="铁锭"><span class="stack">8</span></span></span>
+		<br />
 		<span class="ui slot"><span class="leather" title="皮革"><span class="stack">8</span></span></span>
 		<span class="ui slot"><span class="wheat" title="小麦"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="potato" title="马铃薯"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="carrot" title="胡萝卜"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="chorus_fruit" title="紫颂果"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="spider_eye" title="蜘蛛眼"><span class="stack">16</span></span></span>
-		<br />
 		<span class="ui slot"><span class="ender_pearl" title="末影珍珠"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="porkchop" title="生猪排"><span class="stack">16</span></span></span>
+		<br />
 		<span class="ui slot"><span class="chicken" title="生鸡肉"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="nether_wart" title="地狱疣"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="string" title="线"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="coal" title="煤炭"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="white_wool" title="白色羊毛"><span class="stack">16</span></span></span>
-		<br />
 		<span class="ui slot"><span class="lapis_lazuli" title="青金石"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="glowstone_dust" title="荧石粉"><span class="stack">16</span></span></span>
 		<span class="ui slot"><span class="redstone" title="红石"><span class="stack">16</span></span></span>
+		<br />
 		<span class="ui slot"><span class="paper" title="纸"><span class="stack">32</span></span></span>
 		<span class="ui slot"><span class="charcoal" title="木炭"><span class="stack">32</span></span></span>
 		<span class="ui slot"><span class="red_dye" title="红色染料"><span class="stack">32</span></span></span>
 		<span class="ui slot"><span class="black_dye" title="黑色染料"><span class="stack">32</span></span></span>
-		<br />
 		<span class="ui slot"><span class="seagrass" title="海草"><span class="stack">32</span></span></span>
 		<span class="ui slot"><span class="kelp" title="海带"><span class="stack">32</span></span></span>
+		<span class="ui slot"><span class="cod" title="鳕鱼"><span class="stack">32</span></span></span>
+		<span class="ui slot"><span class="salmon" title="鲑鱼"><span class="stack">32</span></span></span>
+		<br />
+		<span class="ui slot"><span class="tropical_fish" title="热带鱼"><span class="stack">32</span></span></span>
+		<span class="ui slot"><span class="pufferfish" title="河豚"><span class="stack">32</span></span></span>
 		<span class="ui slot"><span class="rotten_flesh" title="腐肉"><span class="stack">36</span></span></span>
 		<span class="ui slot"><span class="gunpowder" title="火药"><span class="stack">36</span></span></span>
 		<span class="ui slot"><span class="bone_meal" title="骨粉"><span class="stack">36</span></span></span>
 		<span class="ui slot"><span class="blaze_powder" title="烈焰粉"><span class="stack">36</span></span></span>
 		<span class="ui slot"><span class="slime_ball" title="粘液球"><span class="stack">36</span></span></span>
-		<br />
 		<span class="ui slot"><span class="arrow" title="箭"><span class="stack">36</span></span></span>
+		<br />
 		<span class="ui slot"><span class="prismarine_crystals" title="海晶砂粒"><span class="stack">36</span></span></span>
 		<span class="ui slot"><span class="bamboo" title="竹子"><span class="stack">36</span></span></span>
 		<span class="ui slot"><span class="sweet_berries" title="浆果"><span class="stack">36</span></span></span>
