--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </tr>
 </tbody></table>
 
-<p>下载后，将解压缩后的<code>datapacks</code>文件夹和<code>resources.zip</code>放入<code>.minecraft/saves/世界名</code>文件夹。安装完成后进入游戏并按下F3+T即可。服务端的操作类似，请设置为自动下载资源包，客户端无需安装数据包。</p>
+<p>下载后，将解压缩后的<code>datapacks</code>文件夹和<code>resources.zip</code>放入<code>.minecraft/saves/世界名</code>文件夹。安装完成后进入游戏并按下F3+T即可。服务端的操作类似，请设置为自动下载资源包(server.properties里面的resource-pack设置为资源包地址)，客户端无需安装数据包。</p>
 
 
 <p>大部分合成需使用<a href="#crafting_machine"><img src="items/crafting_machine.png" style="height:20px;" />合成器</a>。模组需要的附魔之瓶可通过副手持有漏斗获取。</p>
@@ -113,7 +113,7 @@
 <p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree 折君 天狼星black 匠魂 Gingerbread MC先生</p>
 <p><span style="font-weight:bold;">服务器支持</span>：HerobrineXia SorrowRain 苹果果</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
-<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">一米八微笑 明月庄主 墨鱼 uuu2011 火星浮云 这是彩虹糖呢 倪采臣 SPGoding ustc_zzzz 苹果果 落天望月 chyx switefaster</span></p>
+<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">一米八微笑 明月庄主 Rhythm萱 墨鱼 uuu2011 火星浮云 这是彩虹糖呢 倪采臣 SPGoding ustc_zzzz 苹果果 落天望月 chyx switefaster</span></p>
 <p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、盐等模组以及Bilibili与Youtube一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a>等小组以及<a href="http://www.mcbbs.net/?1963599">pineapple_</a>、<a href="http://www.mcbbs.net/?160123">贰逼</a>、ECS、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?582040">chyx</a>、<a href="https://github.com/ustc-zzzz">zzzz_ustc</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>、<a href="https://github.com/switefaster">switefaster</a>、折君、<a href="http://www.mcbbs.net/?725858">⊙v⊙</a>、Herobrinexia、Amber等玩家亦对此模组有贡献。</p>
 <p style="color:blue;">感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
@@ -831,10 +831,11 @@
 </span></span><span class="ui slot"><span class="wheat" title="小麦">
 </span></span><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">4</span></span></span></td></tr>
 
-<tr><td>牛</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/9/93/CowFace.png" title="牛" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
+<tr><td>牛(93.75%)</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/9/93/CowFace.png" title="牛" /></td><td rowspan="2"><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="leather" title="皮革">
 </span></span><span class="ui slot"><span class="wheat" title="小麦">
 </span></span><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">4</span></span></span></td></tr>
+<tr><td>哞菇(6.25%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/3/32/MooshroomFace.png" title="哞菇" /></td></tr>
 
 <tr><td>猪</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/0/03/PigFace.png" title="猪" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="porkchop" title="猪排">
@@ -973,20 +974,19 @@
 </span></span><span class="ui slot"><span class="gold_nugget" title="金粒">
 </span></span><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">8</span></span></span></td></tr>
 
-<tr><td>村民</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/d/d3/Villagerhead.png" title="村民" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
+<tr><td>村民(93.75%)</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/d/d3/Villagerhead.png" title="村民" /></td><td rowspan="2"><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="emerald" title="绿宝石">
 </span></span><span class="ui slot"><span class="book" title="书">
 </span></span><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">8</span></span></span></td></tr>
+<tr><td>流浪商人(6.25%)</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/d/d3/Villagerhead.png" title="流浪商人" /></td></tr>
 
-<tr><td>卫道士</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/e/e3/Vindicator_Head.png" title="卫道士" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
-</span></span><span class="ui slot"><span class="emerald" title="绿宝石">
-</span></span><span class="ui slot"><span class="iron_block" title="铁块">
-</span></span><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
-
-<tr><td>唤魔者</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/5/58/Evoker_Head.png" title="唤魔者" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
+<tr><td>卫道士(43.75%)</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/e/e3/Vindicator_Head.png" title="卫道士" /></td><td rowspan="4"><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="emerald" title="绿宝石">
 </span></span><span class="ui slot"><span class="gold_block" title="金块">
 </span></span><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
+<tr><td>掠夺者(43.75%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/5/5a/PillagerFace.png" title="掠夺者" /></td></tr>
+<tr><td>唤魔者(6.25%)</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/5/58/Evoker_Head.png" title="唤魔者" /></td></tr>
+<tr><td>掠夺兽(6.25%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/1/1a/IllagerBeastFace.png" title="掠夺兽" /></td></tr>
 
 <tr><td>守卫者(93.75%)</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/e/e6/GuardianFace.png" title="守卫者" /></td><td rowspan="2"><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="water_bottle" title="水瓶">
@@ -1032,10 +1032,11 @@
 </span></span><a href="#heads"><span class="ui slot"><span class="skeleton_skull" title="骷髅头颅">
 </span></span></a><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
 
-<tr><td>羊驼</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/c/cf/Llama_Head.png" title="羊驼" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
+<tr><td>羊驼(93.75%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/d/d3/LlamaFace.png" title="羊驼" /></td><td rowspan="2"><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="lime_carpet" title="任意地毯">
 </span></span><a href="#heads"><span class="ui slot"><span class="skeleton_skull" title="骷髅头颅">
 </span></span></a><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
+<tr><td>商队羊驼(6.25%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/d/d3/LlamaFace.png" title="商队羊驼" /></td></tr>
 
 <tr><td>鹦鹉</td><td><img src="https://d1u5p3l4wpay3k.cloudfront.net/minecraft_zh_gamepedia/3/37/ParrotFace.png" title="鹦鹉" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="feather" title="羽毛">
@@ -1297,7 +1298,7 @@
 
 <h3 id="limb_of_ridge">山脉之肢 (Limb of Ridge)</h3>
 <span class="ui single"><span class="ci limb_of_ridge"></span></span>
-<p>牛/驴/马/骡/羊驼/哞菇/猪/北极熊/兔子/羊/熊猫被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</p>
+<p>牛/驴/马/骡/羊驼/商队羊驼/哞菇/猪/北极熊/兔子/羊/熊猫被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</p>
 <p>可用于合成<a href="#high_pressure_plugin">高压插件</a>、<a href="#cyan_force_of_mountain">青色山之力</a>、<a href="#origin_of_the_world">世界之源</a>。</p>
 <p>可用于<a href="#rituals">仪式</a>的附魔书制作、效果附加和属性附加。</p>
 
@@ -1309,7 +1310,7 @@
 
 <h3 id="certification_of_earth">大地之证 (Certification of Earth)</h3>
 <span class="ui single"><span class="ci certification_of_earth"></span></span>
-<p>僵尸村民/村民/卫道士/唤魔者/掠夺兽/掠夺者被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</p>
+<p>僵尸村民/村民/流浪商人/卫道士/唤魔者/掠夺兽/掠夺者被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</p>
 <p>可用于合成<a href="#trade_machine">交易机</a>、<a href="#yellow_force_of_earth">黄色地之力</a>。</p>
 <p>可用于<a href="#rituals">仪式</a>的附魔书制作、效果附加和属性附加。</p>
 
@@ -5926,7 +5927,9 @@ scoreboard players set #rituals_time cppValue 1200
 <li>游戏本体版本升级为1.14，不再支持1.14之前的版本。</li><li>新增并修改材质。</li><li>新增使用指令/loot give @s loot cpp:物品英文名可获取相应物品。</li><li>新增附魔室的物品要塞地图、地牢地图。</li><li>新增附魔室生成幻术师。</li><li>新增自然生成农作物。</li><li>新增自然生成花草。</li><li>新增自然生成水果树和矿石树。</li><li>现在死亡的云杉仅在针叶林及其变种生物群系内生成。</li><li>现在死珊瑚扇仅在沙漠和恶地及其变种生物群系内生成。</li><li>修改了骷髅和僵尸的盔甲、武器算法和几率。</li><li>修改了高压爬行者的几率。</li><li>新增对凋零骷髅的加强。</li><li>新增部分生物的稀有掉落物。</li><li>修改肉类名称。</li><li>新增玩家死亡掉落头。</li><li>鸡死亡掉落鸡蛋数受抢夺加成上限从1调整为0.5。</li>
 <li>新增森林蝙蝠掉落香橼。</li>
 <li>现在豹猫不再掉落猫头。</li>
-<li>现在猫/熊猫/海龟有几率掉落头。</li><li>绿宝石块吸引村民支持副手。</li><li>修改所有配方中的染料为1.14的相应染料。</li><li>修改花合成染料为烧炼。</li><li>烧炼配方现在支持高炉、烟熏炉和营火。</li><li>新增信标增强器可选择敌对/全部生物。</li><li>新增多功能一体机常温常压模式制作竹子。</li><li>修改多功能一体机常温高压下部分产物几率和数量。</li><li>移除多功能一体机常温高压下压缩功能。</li><li>修改生物投影仪的豹猫为猫。</li><li>修改生物投影仪材质，可以显示正在生成的生物。</li><li>修改除信标增强器外的机器所在方块为木桶。</li><li>新增碎钻，烧炼矿石制品得到，可合成钻石。</li><li>新增煤粒，煤炭或木炭分解得到。</li><li>修复粗硅的错误名称。</li><li>修改矿石粉为只需要/只能烧炼出1个矿物。</li><li>修改月之碎片合成配方中的附魔金苹果为粘液球。</li><li>新增4个月之碎片和末影之眼合成日之碎片。</li><li>新增4个日之碎片和下界之星合成2下界之星。</li><li>新增月石，使用9月之碎片合成，可分解。</li><li>新增日石，使用9日之碎片合成，可分解。</li><li>移除神秘烈焰粉和神秘兔子脚。</li><li>修改草方块的合成配方为8草丛加泥土。</li><li>修改菌丝的合成配方为4棕色蘑菇、4红色蘑菇加泥土。</li><li>修改皮革和兔子皮的比例恢复为1:4。</li><li>修改石英块和石英的比例恢复为1:4。</li><li>修改合成珊瑚块所需珊瑚个数为4。</li><li>新增热带鱼类别的翻译。</li><li>修改热带鱼桶的合成配方。</li><li>移除彩色床加染料合成彩色床的配方。</li><li>修改蓝色天之力为可根据当前天气调节。</li><li>修改白色电之力的功能为消耗6点生命值恢复10点魔力值。</li><li>新增剪枝器，2木棍和附魔铁锭合成，破坏树叶得到树苗。</li><li>新增玻璃镐，可破坏玻璃。</li><li>新增鸡窝，使用5小麦合成，破坏后无掉落。</li><li>鸡将要下蛋时会寻找附近的鸡窝，如果没有则会创建一个。</li><li>鸡必须有鸡窝才能下蛋。</li><li>调整了傀儡农民和傀儡矿工的功能。</li><li>新增中国国旗，使用牡丹、焰光菊、金盏花和红色旗帜合成得到。</li><li>新增美国国旗，使用玫瑰丛、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增俄罗斯国旗，使用向日葵、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增英国国旗，使用虞美人、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增法国国旗，使用矢车菊、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增bilibili标志，使用黑荆棘、白车轴、芦苇草和画合成得到。</li><li>新增github标志，使用黑荆棘、白车轴、香蒲草和画合成得到。</li><li>新增mcmod标志，使用黑荆棘、白车轴、异绒兰和画合成得到。</li><li>新增tcp标志，使用黑荆棘、白车轴、紫荆花和画合成得到。</li><li>新增cbl标志，使用黑荆棘、白车轴、风信子和画合成得到。</li><li>新增盾牌和国旗或标志合成相应图案的盾牌。</li><li>新增食物饥饿值显示。</li><li>新增煮鸡蛋代替鸡蛋羹，恢复2点饥饿值。</li><li>修改土豆牛肉、土豆排骨、兔肉煲效果为力量I。</li><li>修改土豆牛肉等食物为无序合成。</li><li>修改炸鱼薯条的配方为盐瓶、熟鳕鱼、烤马铃薯、番茄酱和碗。</li><li>修改肉松面包的配方为盐瓶、小麦和熟鸡肉或熟鹦鹉肉。</li><li>新增番茄酱，使用西红柿、糖和盐瓶合成，恢复5点饥饿值。</li><li>新增奶酪，使用牛奶桶和柠檬无序合成，恢复5点饥饿值。</li><li>新增汉堡，使用番茄酱、奶酪、西红柿、牛排和面包无序合成，恢复20点饥饿值。</li><li>新增披萨，使用番茄酱、奶酪、西红柿、熟猪排和小麦无序合成，恢复5点饥饿值。</li><li>新增寿司，使用干海带、小麦和生鲑鱼无序合成，恢复5点饥饿值。</li><li>新增仰望星空派，使用熟鳕鱼、熟猪排、棕色蘑菇和小麦合成，恢复16点饥饿值。</li><li>新增烤鸡，使用熟鸡肉、柠檬和烤马铃薯合成，恢复16点饥饿值。</li><li>新增饺子，使用熟猪排或熟牛排和8小麦合成得到4个，恢复5点饥饿值。</li><li>新增25种可食用的水果。</li><li>新增葡萄干，烧炼葡萄/金葡萄得到，食用后获得10秒速度。</li><li>现在冷饮可恢复5点魔力值。</li><li>新增稀有掉落物可用于酿造。</li><li>修改连锁算法，现在只破坏镐子可挖掘的方块了。</li><li>新增花草替代作物，成熟后破坏得到花草。</li><li>新增花草烧炼成对应物。</li><li>新增花草合成为3个对应种子。</li><li>修改羊毛树掉落羊毛树树苗、鱼和羊。</li><li>移除水果树树苗、矿石树树苗、羊毛树树苗的合成配方。</li><li>新增圣诞花，使用虞美人、彼岸花、金盏花和碎璃草无序合成。</li><li>新增圣诞树，使用4荧石粉、2雪球、2圣诞花和云杉树苗合成。</li><li>现在漂浮时可按下shift下降。</li><li>修改扫帚和流星丸需要跳跃才可漂浮，移除主手效果。</li><li>新增魔法，包括召唤术：风火雷雨灵，催化术：风火雷雨灵地。</li><li>若要使用魔法，玩家需要副手持有魔杖，然后按下对应的键，最后双击F发动，玩家需要拥有足够的魔法值方可。</li><li>新增出生点附近生成魔导石，每秒恢复32米内玩家1点魔法值，上限30点。</li><li>新增4级星标上的信标增强仪每秒恢复64米内玩家1点魔法值，上限60点。</li><li>新增4级星标上的信标增强仪，若顶层基座使用5日石和4月石，每秒恢复128米内玩家1点魔法值，上限100点。</li><li>现在头饰可直接佩戴。</li><li>新增紫色美瞳，戴上后显示玩家附近的野生花草。</li><li>新增花环每10秒恢复玩家1点魔法值，上限30点。</li><li>新增原谅帽每10秒恢复玩家1点魔法值，上限60点。</li><li>新增冕旒每10秒恢复玩家1点魔法值，上限100点。</li><li>新增烈焰红唇、愚弄眼镜、小黄人眼罩。</li><li>新增经典画作，使用羽毛、黑色染料和画无序合成。</li><li>将经典画作放置在物品展示框上，会随机显示33种画的一种。</li><li>新增彩色告示牌。</li><li>新增玻璃物品展示框，使用玻璃板和8个木棍合成。放入物品后变透明。</li><li>修改合成楼梯数量为4个，楼梯回收为4个。</li>
+<li>现在猫/熊猫/海龟有几率掉落头。</li><li>绿宝石块吸引村民支持副手。</li><li>修改所有配方中的染料为1.14的相应染料。</li><li>修改花合成染料为烧炼。</li><li>烧炼配方现在支持高炉、烟熏炉和营火。</li><li>新增信标增强器可选择敌对/全部生物。</li><li>新增多功能一体机常温常压模式制作竹子。</li><li>修改多功能一体机常温高压下部分产物几率和数量。</li><li>移除多功能一体机常温高压下压缩功能。</li><li>修改生物投影仪的豹猫为猫。</li>
+<li>修改生物投影仪材质，可以显示正在生成的生物。</li>
+<li>现在生物投影仪牛有6.25%几率为哞菇；村民有6.25%几率为游走商人；羊驼有6.25%几率为商队羊驼；合并卫道士至唤魔者配方，几率为50%，并有43.75%几率生成掠夺者，6.25%几率生成唤魔者，6.25%几率生成掠夺兽。</li><li>修改除信标增强器外的机器所在方块为木桶。</li><li>新增碎钻，烧炼矿石制品得到，可合成钻石。</li><li>新增煤粒，煤炭或木炭分解得到。</li><li>修复粗硅的错误名称。</li><li>修改矿石粉为只需要/只能烧炼出1个矿物。</li><li>修改月之碎片合成配方中的附魔金苹果为粘液球。</li><li>新增4个月之碎片和末影之眼合成日之碎片。</li><li>新增4个日之碎片和下界之星合成2下界之星。</li><li>新增月石，使用9月之碎片合成，可分解。</li><li>新增日石，使用9日之碎片合成，可分解。</li><li>移除神秘烈焰粉和神秘兔子脚。</li><li>修改草方块的合成配方为8草丛加泥土。</li><li>修改菌丝的合成配方为4棕色蘑菇、4红色蘑菇加泥土。</li><li>修改皮革和兔子皮的比例恢复为1:4。</li><li>修改石英块和石英的比例恢复为1:4。</li><li>修改合成珊瑚块所需珊瑚个数为4。</li><li>新增热带鱼类别的翻译。</li><li>修改热带鱼桶的合成配方。</li><li>移除彩色床加染料合成彩色床的配方。</li><li>修改蓝色天之力为可根据当前天气调节。</li><li>修改白色电之力的功能为消耗6点生命值恢复10点魔力值。</li><li>新增剪枝器，2木棍和附魔铁锭合成，破坏树叶得到树苗。</li><li>新增玻璃镐，可破坏玻璃。</li><li>新增鸡窝，使用5小麦合成，破坏后无掉落。</li><li>鸡将要下蛋时会寻找附近的鸡窝，如果没有则会创建一个。</li><li>鸡必须有鸡窝才能下蛋。</li><li>调整了傀儡农民和傀儡矿工的功能。</li><li>新增中国国旗，使用牡丹、焰光菊、金盏花和红色旗帜合成得到。</li><li>新增美国国旗，使用玫瑰丛、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增俄罗斯国旗，使用向日葵、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增英国国旗，使用虞美人、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增法国国旗，使用矢车菊、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增bilibili标志，使用黑荆棘、白车轴、芦苇草和画合成得到。</li><li>新增github标志，使用黑荆棘、白车轴、香蒲草和画合成得到。</li><li>新增mcmod标志，使用黑荆棘、白车轴、异绒兰和画合成得到。</li><li>新增tcp标志，使用黑荆棘、白车轴、紫荆花和画合成得到。</li><li>新增cbl标志，使用黑荆棘、白车轴、风信子和画合成得到。</li><li>新增盾牌和国旗或标志合成相应图案的盾牌。</li><li>新增食物饥饿值显示。</li><li>新增煮鸡蛋代替鸡蛋羹，恢复2点饥饿值。</li><li>修改土豆牛肉、土豆排骨、兔肉煲效果为力量I。</li><li>修改土豆牛肉等食物为无序合成。</li><li>修改炸鱼薯条的配方为盐瓶、熟鳕鱼、烤马铃薯、番茄酱和碗。</li><li>修改肉松面包的配方为盐瓶、小麦和熟鸡肉或熟鹦鹉肉。</li><li>新增番茄酱，使用西红柿、糖和盐瓶合成，恢复5点饥饿值。</li><li>新增奶酪，使用牛奶桶和柠檬无序合成，恢复5点饥饿值。</li><li>新增汉堡，使用番茄酱、奶酪、西红柿、牛排和面包无序合成，恢复20点饥饿值。</li><li>新增披萨，使用番茄酱、奶酪、西红柿、熟猪排和小麦无序合成，恢复5点饥饿值。</li><li>新增寿司，使用干海带、小麦和生鲑鱼无序合成，恢复5点饥饿值。</li><li>新增仰望星空派，使用熟鳕鱼、熟猪排、棕色蘑菇和小麦合成，恢复16点饥饿值。</li><li>新增烤鸡，使用熟鸡肉、柠檬和烤马铃薯合成，恢复16点饥饿值。</li><li>新增饺子，使用熟猪排或熟牛排和8小麦合成得到4个，恢复5点饥饿值。</li><li>新增25种可食用的水果。</li><li>新增葡萄干，烧炼葡萄/金葡萄得到，食用后获得10秒速度。</li><li>现在冷饮可恢复5点魔力值。</li><li>新增稀有掉落物可用于酿造。</li><li>修改连锁算法，现在只破坏镐子可挖掘的方块了。</li><li>新增花草替代作物，成熟后破坏得到花草。</li><li>新增花草烧炼成对应物。</li><li>新增花草合成为3个对应种子。</li><li>修改羊毛树掉落羊毛树树苗、鱼和羊。</li><li>移除水果树树苗、矿石树树苗、羊毛树树苗的合成配方。</li><li>新增圣诞花，使用虞美人、彼岸花、金盏花和碎璃草无序合成。</li><li>新增圣诞树，使用4荧石粉、2雪球、2圣诞花和云杉树苗合成。</li><li>现在漂浮时可按下shift下降。</li><li>修改扫帚和流星丸需要跳跃才可漂浮，移除主手效果。</li><li>新增魔法，包括召唤术：风火雷雨灵，催化术：风火雷雨灵地。</li><li>若要使用魔法，玩家需要副手持有魔杖，然后按下对应的键，最后双击F发动，玩家需要拥有足够的魔法值方可。</li><li>新增出生点附近生成魔导石，每秒恢复32米内玩家1点魔法值，上限30点。</li><li>新增4级星标上的信标增强仪每秒恢复64米内玩家1点魔法值，上限60点。</li><li>新增4级星标上的信标增强仪，若顶层基座使用5日石和4月石，每秒恢复128米内玩家1点魔法值，上限100点。</li><li>现在头饰可直接佩戴。</li><li>新增紫色美瞳，戴上后显示玩家附近的野生花草。</li><li>新增花环每10秒恢复玩家1点魔法值，上限30点。</li><li>新增原谅帽每10秒恢复玩家1点魔法值，上限60点。</li><li>新增冕旒每10秒恢复玩家1点魔法值，上限100点。</li><li>新增烈焰红唇、愚弄眼镜、小黄人眼罩。</li><li>新增经典画作，使用羽毛、黑色染料和画无序合成。</li><li>将经典画作放置在物品展示框上，会随机显示33种画的一种。</li><li>新增彩色告示牌。</li><li>新增玻璃物品展示框，使用玻璃板和8个木棍合成。放入物品后变透明。</li><li>修改合成楼梯数量为4个，楼梯回收为4个。</li>
 <li>现在可使用切石机切割木板。</li>
 <li>移除平滑方块的合成和加速效果。</li><li>将实用功能部分分离为发射器种植、下界干燥湿海绵、复合台阶、随机方块、箱子排序、炼药锅功能。</li><li>新增炼药锅漂白羊毛、床、粘性活塞。</li><li>修改了随机方块功能为：副手持有潜影箱而主手为空时，将会从潜影箱随机选择一个给予玩家。</li><li>修改箱子排序为只需主手或副手持有木棍即可。</li><li>修改箱子排序算法，现在支持大箱子且可以满槽位。</li><li>移除竖台阶，修改墙名称为竖台阶和模型。</li>
 <li>现在复合台阶拥有完整碰撞箱且破坏后全部掉落。</li><li>修改双台阶模型材质为竖纹。</li><li>修改末影龙掉落龙蛋方块而不是龙头。</li><li>修改村民代码以支持1.14。</li><li>为村民出售的食物添加了饱食度显示。</li><li>制图师现在可以出售各种结构的地图了，使用月之碎片购买。与所在维度有关，若无相应结构则无效。</li><li>修改了tcp的logo。</li>
