--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m02d11(魔法更新)，支持Minecraft Java版 1.14快照19w05a。</p>
+<p>最新版本为测试版v1.9-m02d11(魔法更新)，支持Minecraft Java版 1.14快照19w05a+。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
@@ -68,7 +68,7 @@
 <table><thead><tr><th>支持的minecraft版本</th><th>Crafting++版本</th><th>下载地址</th><th>更新日志</th></tr></thead>
 <tbody>
 <tr>
-	<td>Minecraft Java版 19w05a</td>
+	<td>Minecraft Java版 19w05a+</td>
 	<td>Crafting++ 1.9测试版m02d11</td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m02d11.zip">github</a>
       | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m02d11.zip">官方</a></td>
