--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m02d11(魔法更新)，支持Minecraft Java版 1.14快照19w05a+。</p>
+<p>最新版本为测试版v1.9-m02d15(魔法更新)，支持Minecraft Java版 1.14快照19w07a+。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
@@ -69,9 +69,9 @@
 <tbody>
 <tr>
 	<td>Minecraft Java版 19w05a+</td>
-	<td>Crafting++ 1.9测试版m02d11</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m02d11.zip">github</a>
-      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m02d11.zip">官方</a></td>
+	<td>Crafting++ 1.9测试版m02d15</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m02d15.zip">github</a>
+      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m02d15.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
@@ -147,6 +147,7 @@
 <tr><th>便捷化</th><td>
 <a href="#cauldon">炼药锅</a>
 · <a href="#leaves_fast_decay">树叶快速腐烂</a>
+· <a href="#obsidian_wither_immune">黑曜石防凋灵</a>
 · <a href="#random_block">随机方块</a>
 · <a href="#sort_chest">箱子整理</a>
 · <a href="#dispenser_plant">自动种植</a>
@@ -277,7 +278,7 @@
 
 <tr><th>实用工具</th><td>
   <a href="#portable_crafting_table"><span class="ci" style="background-position: -0px -144px;"></span>便携式工作台</a> 
-· <a href="#portable_crafting_machine"><span class="ci" style="background-position: -80px -808px;"></span>便携式合成器</a> 
+· <a href="#portable_crafting_machine"><span class="ci" style="background-position: -80px -608px;"></span>便携式合成器</a> 
 · <a href="#magnet"><span class="ci" style="background-position: -16px -144px;"></span>磁铁</a> 
 · <a href="#time_conditioner"><span class="ci" style="background-position: -32px -144px;"></span>时间调节器</a> 
 · <a href="#time_checker"><span class="ci" style="background-position: -48px -144px;"></span>报时器</a> 
@@ -437,6 +438,9 @@
 · <a href="#blue_jeans"><span class="ci" style="background-position: -32px -416px;"></span>牛仔裤</a> 
 · <a href="#snow_boots"><span class="ci" style="background-position: -48px -416px;"></span>雪地靴</a> 
 · <a href="#classical_painting"><span class="ci" style="background-position: -64px -416px;"></span>经典画作</a> 
+· <a href="#bedsheet"><span class="ci" style="background-position: -96px -608px;"></span>
+<span class="ci" style="background-position: -112px -608px;"></span>
+<span class="ci" style="background-position: -128px -608px;"></span>床单</a> 
 · <a href="#colorful_sign"><span class="ci" style="background-position: -64px -560px;"></span>彩色告示牌</a> 
 · <a href="#glass_item_frame"><span class="ci" style="background-position: -80px -416px;"></span>玻璃物品展示框</a> 
 · <a href="#stairs"><span style="background-position: -352px -448px;"></span>楼梯</a> 
@@ -1098,7 +1102,7 @@
 </span></span><span class="ui slot"><span class="lime_carpet" title="任意地毯">
 </span></span><a href="#heads"><span class="ui slot"><span class="skeleton_skull" title="骷髅头颅">
 </span></span></a><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
-<tr><td>商队羊驼(6.25%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_gamepedia/d/d3/LlamaFace.png" title="商队羊驼" /></td></tr>
+<tr><td>行商羊驼(6.25%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_gamepedia/d/d3/LlamaFace.png" title="行商羊驼" /></td></tr>
 
 <tr><td>鹦鹉</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/3/37/ParrotFace.png" title="鹦鹉" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="feather" title="羽毛">
@@ -1107,6 +1111,11 @@
 
 <tr><td>海龟</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/8/8b/TurtleFace.png" title="海龟" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="seagrass" title="海草">
+</span></span><a href="#heads"><span class="ui slot"><span class="skeleton_skull" title="骷髅头颅">
+</span></span></a><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
+
+<tr><td>狐狸</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/8/88/FoxFace.png" title="狐狸" /></td><td><span class="ui slot"><span class="egg" title="鸡蛋">
+</span></span><span class="ui slot"><span class="sweet_berries" title="甜浆果">
 </span></span><a href="#heads"><span class="ui slot"><span class="skeleton_skull" title="骷髅头颅">
 </span></span></a><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
 
@@ -1361,7 +1370,7 @@
 
 <h3 id="limb_of_ridge">山脉之肢 (Limb of Ridge)</h3>
 <span class="ui single"><span class="ci limb_of_ridge"></span></span>
-<p>牛/驴/马/骡/羊驼/商队羊驼/哞菇/猪/北极熊/兔子/羊/熊猫被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</p>
+<p>牛/驴/马/骡/羊驼/行商羊驼/哞菇/猪/北极熊/兔子/羊/熊猫被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。</p>
 <p>可用于合成<a href="#high_pressure_plugin">高压插件</a>、<a href="#cyan_force_of_mountain">青色山之力</a>、<a href="#origin_of_the_world">世界之源</a>。</p>
 <p>可用于<a href="#rituals">仪式</a>的附魔书制作、效果附加和属性附加。</p>
 
@@ -5253,7 +5262,15 @@
 
 <h3 id="classical_painting">经典画作 (Classical Painting)</h3>
 <span class="ui single"><span class="ci classical_painting"></span></span>
-<p>将经典画作放置在物品展示框上，会随机显示33种画的一种。</p>
+<p>将经典画作放置在物品展示框上，会随机显示33种画的一种，右键可按次序切换图案。包括：
+无名女郎、罗纳河上的星空、蒙娜丽莎、梦、日出印象、
+舞蹈教室、吹笛少年、塔希提岛的牧歌、劳动归来、春光、
+吻、红磨坊舞会、松树林之晨、画家母亲肖像、暴风雨、
+意外归来、缠毛线、玩牌者、马克思与恩格斯、自由引导人民、
+拾穗、带珍珠耳环的少女、呐喊、向日葵、苏格拉底之死、
+金色的秋天、星月夜、最后的晚餐、开国大典、落霞孤鹜图、
+竹石图、寒江独钓图、松梅双鹤图。
+</p>
 
 <table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th></tr></thead>
 <tbody>
@@ -5272,7 +5289,12 @@
 <span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 </span></td></tr>
 </tbody></table>
-<p><img style="height:400px" src="items/screenshots/paintings.png" /></p>
+
+<h3 id="bedsheet">床单 (Bedsheet)</h3>
+<span class="ui single"><span class="ci bedsheet01"></span></span>
+<span class="ui single"><span class="ci bedsheet02"></span></span>
+<span class="ui single"><span class="ci bedsheet03"></span></span>
+<p>对床shift右键即可使用，共八种样式。从<a href="#trade">圣诞老人村民</a>处购买圣诞礼物有几率得到。</p>
 
 <h3 id="colorful_sign">彩色告示牌 (Colorful Sign)</h3>
 <span class="ui single"><span class="ci white_sign"></span></span>
@@ -5418,6 +5440,9 @@
 <h3 id="leaves_fast_decay">树叶快速腐烂</h3>
 <p>现在树上的树叶没有邻近的木头时，会迅速腐烂。</p>
 
+<h3 id="obsidian_wither_immune">黑曜石防凋灵</h3>
+<p>现在凋灵无法破坏黑曜石。</p>
+
 <h3 id="random_block">随机方块</h3>
 <p>副手持有潜影箱而主手为空时，将会从潜影箱随机选择一个给予玩家。</p>
 <p><img style="height:200px" src="items/screenshots/random_block.png" /></p>
@@ -5541,7 +5566,7 @@
 <img src="items/image/harvest.png" style="height:60px;" />
 <img src="items/image/prosperous.png" style="height:60px;" />
 <img src="items/image/tcp_logo.png" style="height:60px;" /><br />
-[2] 打开后可随机获得鞘翅、附魔钻石盔甲/工具/剑、铁盔甲/工具/剑、矿物、食物、鞍、马铠、种子。<br />
+[2] 打开后可随机获得鞘翅、附魔钻石盔甲/工具/剑、铁盔甲/工具/剑、矿物、食物、马铠、种子和<a href="#bedsheet">床单</a>。<br />
 [3] 为双层球状，颜色随机。<br />
 </td></tr>
 </tbody></table>
@@ -5986,7 +6011,7 @@ scoreboard players set #rituals_time cppValue 1200
 <li>现在豹猫不再掉落猫头。</li>
 <li>现在猫/熊猫/海龟有几率掉落头。</li><li>绿宝石块吸引村民支持副手。</li><li>修改所有配方中的染料为1.14的相应染料。</li><li>修改花合成染料为烧炼。</li><li>烧炼配方现在支持高炉、烟熏炉和营火。</li><li>新增信标增强器可选择敌对/全部生物。</li><li>新增多功能一体机常温常压模式制作竹子。</li><li>修改多功能一体机常温高压下部分产物几率和数量。</li><li>移除多功能一体机常温高压下压缩功能。</li><li>修改生物投影仪的豹猫为猫。</li>
 <li>修改生物投影仪材质，可以显示正在生成的生物。</li>
-<li>现在生物投影仪牛有6.25%几率为哞菇；村民有6.25%几率为游走商人；羊驼有6.25%几率为商队羊驼；合并卫道士至唤魔者配方，几率为50%，并有43.75%几率生成掠夺者，6.25%几率生成唤魔者，6.25%几率生成掠夺兽。</li><li>修改除信标增强器外的机器所在方块为木桶。</li><li>新增碎钻，烧炼矿石制品得到，可合成钻石。</li><li>新增煤粒，煤炭或木炭分解得到。</li><li>修复粗硅的错误名称。</li><li>修改矿石粉为只需要/只能烧炼出1个矿物。</li><li>修改月之碎片合成配方中的附魔金苹果为粘液球。</li><li>新增4个月之碎片和末影之眼合成日之碎片。</li><li>新增4个日之碎片和下界之星合成2下界之星。</li><li>新增月石，使用9月之碎片合成，可分解。</li><li>新增日石，使用9日之碎片合成，可分解。</li><li>移除神秘烈焰粉和神秘兔子脚。</li><li>修改草方块的合成配方为8草丛加泥土。</li><li>修改菌丝的合成配方为4棕色蘑菇、4红色蘑菇加泥土。</li><li>修改皮革和兔子皮的比例恢复为1:4。</li><li>修改石英块和石英的比例恢复为1:4。</li><li>修改合成珊瑚块所需珊瑚个数为4。</li><li>新增热带鱼类别的翻译。</li><li>修改热带鱼桶的合成配方。</li><li>移除彩色床加染料合成彩色床的配方。</li><li>修改蓝色天之力为可根据当前天气调节。</li><li>修改白色电之力的功能为消耗6点生命值恢复10点魔力值。</li><li>新增剪枝器，2木棍和附魔铁锭合成，破坏树叶得到树苗。</li><li>新增玻璃镐，可破坏玻璃。</li><li>新增鸡窝，使用5小麦合成，破坏后无掉落。</li><li>鸡将要下蛋时会寻找附近的鸡窝，如果没有则会创建一个。</li><li>鸡必须有鸡窝才能下蛋。</li><li>调整了傀儡农民和傀儡矿工的功能。</li><li>新增中国国旗，使用牡丹、焰光菊、金盏花和红色旗帜合成得到。</li><li>新增美国国旗，使用玫瑰丛、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增俄罗斯国旗，使用向日葵、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增英国国旗，使用虞美人、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增法国国旗，使用矢车菊、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增bilibili标志，使用黑荆棘、白车轴、芦苇草和画合成得到。</li><li>新增github标志，使用黑荆棘、白车轴、香蒲草和画合成得到。</li><li>新增mcmod标志，使用黑荆棘、白车轴、异绒兰和画合成得到。</li><li>新增tcp标志，使用黑荆棘、白车轴、紫荆花和画合成得到。</li><li>新增cbl标志，使用黑荆棘、白车轴、风信子和画合成得到。</li><li>新增盾牌和国旗或标志合成相应图案的盾牌。</li><li>新增食物饥饿值显示。</li><li>新增煮鸡蛋代替鸡蛋羹，恢复2点饥饿值。</li><li>修改土豆牛肉、土豆排骨、兔肉煲效果为力量I。</li><li>修改土豆牛肉等食物为无序合成。</li><li>修改炸鱼薯条的配方为盐瓶、熟鳕鱼、烤马铃薯、番茄酱和碗。</li><li>修改肉松面包的配方为盐瓶、小麦和熟鸡肉或熟鹦鹉肉。</li><li>新增番茄酱，使用西红柿、糖和盐瓶合成，恢复5点饥饿值。</li><li>新增奶酪，使用牛奶桶和柠檬无序合成，恢复5点饥饿值。</li><li>新增汉堡，使用番茄酱、奶酪、西红柿、牛排和面包无序合成，恢复20点饥饿值。</li><li>新增披萨，使用番茄酱、奶酪、西红柿、熟猪排和小麦无序合成，恢复5点饥饿值。</li><li>新增寿司，使用干海带、小麦和生鲑鱼无序合成，恢复5点饥饿值。</li><li>新增仰望星空派，使用熟鳕鱼、熟猪排、棕色蘑菇和小麦合成，恢复16点饥饿值。</li><li>新增烤鸡，使用熟鸡肉、柠檬和烤马铃薯合成，恢复16点饥饿值。</li><li>新增饺子，使用熟猪排或熟牛排和8小麦合成得到4个，恢复5点饥饿值。</li><li>新增25种可食用的水果。</li><li>新增葡萄干，烧炼葡萄/金葡萄得到，食用后获得10秒速度。</li><li>现在冷饮可恢复5点魔力值。</li><li>新增稀有掉落物可用于酿造。</li><li>修改连锁算法，现在只破坏镐子可挖掘的方块了。</li><li>新增花草替代作物，成熟后破坏得到花草。</li><li>新增花草烧炼成对应物。</li><li>新增花草合成为3个对应种子。</li><li>修改羊毛树掉落羊毛树树苗、鱼和羊。</li><li>移除水果树树苗、矿石树树苗、羊毛树树苗的合成配方。</li><li>新增圣诞花，使用虞美人、彼岸花、金盏花和碎璃草无序合成。</li><li>新增圣诞树，使用4荧石粉、2雪球、2圣诞花和云杉树苗合成。</li><li>现在漂浮时可按下shift下降。</li><li>修改扫帚和流星丸需要跳跃才可漂浮，移除主手效果。</li><li>新增魔法，包括召唤术：风火雷雨灵，催化术：风火雷雨灵地。</li><li>若要使用魔法，玩家需要副手持有魔杖，然后按下对应的键，最后双击F发动，玩家需要拥有足够的魔法值方可。</li><li>新增出生点附近生成魔导石，每秒恢复32米内玩家1点魔法值，上限30点。</li><li>新增4级星标上的信标增强仪每秒恢复64米内玩家1点魔法值，上限60点。</li><li>新增4级星标上的信标增强仪，若顶层基座使用5日石和4月石，每秒恢复128米内玩家1点魔法值，上限100点。</li><li>现在头饰可直接佩戴。</li><li>新增紫色美瞳，戴上后显示玩家附近的野生花草。</li><li>新增花环每10秒恢复玩家1点魔法值，上限30点。</li><li>新增原谅帽每10秒恢复玩家1点魔法值，上限60点。</li><li>新增冕旒每10秒恢复玩家1点魔法值，上限100点。</li><li>新增烈焰红唇、愚弄眼镜、小黄人眼罩。</li><li>新增经典画作，使用羽毛、黑色染料和画无序合成。</li><li>将经典画作放置在物品展示框上，会随机显示33种画的一种。</li><li>新增彩色告示牌。</li><li>新增玻璃物品展示框，使用玻璃板和8个木棍合成。放入物品后变透明。</li><li>修改合成楼梯数量为4个，楼梯回收为4个。</li>
+<li>现在生物投影仪牛有6.25%几率为哞菇；村民有6.25%几率为游走商人；羊驼有6.25%几率为行商羊驼；合并卫道士至唤魔者配方，几率为50%，并有43.75%几率生成掠夺者，6.25%几率生成唤魔者，6.25%几率生成掠夺兽。</li><li>修改除信标增强器外的机器所在方块为木桶。</li><li>新增碎钻，烧炼矿石制品得到，可合成钻石。</li><li>新增煤粒，煤炭或木炭分解得到。</li><li>修复粗硅的错误名称。</li><li>修改矿石粉为只需要/只能烧炼出1个矿物。</li><li>修改月之碎片合成配方中的附魔金苹果为粘液球。</li><li>新增4个月之碎片和末影之眼合成日之碎片。</li><li>新增4个日之碎片和下界之星合成2下界之星。</li><li>新增月石，使用9月之碎片合成，可分解。</li><li>新增日石，使用9日之碎片合成，可分解。</li><li>移除神秘烈焰粉和神秘兔子脚。</li><li>修改草方块的合成配方为8草丛加泥土。</li><li>修改菌丝的合成配方为4棕色蘑菇、4红色蘑菇加泥土。</li><li>修改皮革和兔子皮的比例恢复为1:4。</li><li>修改石英块和石英的比例恢复为1:4。</li><li>修改合成珊瑚块所需珊瑚个数为4。</li><li>新增热带鱼类别的翻译。</li><li>修改热带鱼桶的合成配方。</li><li>移除彩色床加染料合成彩色床的配方。</li><li>修改蓝色天之力为可根据当前天气调节。</li><li>修改白色电之力的功能为消耗6点生命值恢复10点魔力值。</li><li>新增剪枝器，2木棍和附魔铁锭合成，破坏树叶得到树苗。</li><li>新增玻璃镐，可破坏玻璃。</li><li>新增鸡窝，使用5小麦合成，破坏后无掉落。</li><li>鸡将要下蛋时会寻找附近的鸡窝，如果没有则会创建一个。</li><li>鸡必须有鸡窝才能下蛋。</li><li>调整了傀儡农民和傀儡矿工的功能。</li><li>新增中国国旗，使用牡丹、焰光菊、金盏花和红色旗帜合成得到。</li><li>新增美国国旗，使用玫瑰丛、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增俄罗斯国旗，使用向日葵、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增英国国旗，使用虞美人、风信子、蓬蓬草和白色旗帜合成得到。</li><li>新增法国国旗，使用矢车菊、风信子、蓬蓬草和红色旗帜合成得到。</li><li>新增bilibili标志，使用黑荆棘、白车轴、芦苇草和画合成得到。</li><li>新增github标志，使用黑荆棘、白车轴、香蒲草和画合成得到。</li><li>新增mcmod标志，使用黑荆棘、白车轴、异绒兰和画合成得到。</li><li>新增tcp标志，使用黑荆棘、白车轴、紫荆花和画合成得到。</li><li>新增cbl标志，使用黑荆棘、白车轴、风信子和画合成得到。</li><li>新增盾牌和国旗或标志合成相应图案的盾牌。</li><li>新增食物饥饿值显示。</li><li>新增煮鸡蛋代替鸡蛋羹，恢复2点饥饿值。</li><li>修改土豆牛肉、土豆排骨、兔肉煲效果为力量I。</li><li>修改土豆牛肉等食物为无序合成。</li><li>修改炸鱼薯条的配方为盐瓶、熟鳕鱼、烤马铃薯、番茄酱和碗。</li><li>修改肉松面包的配方为盐瓶、小麦和熟鸡肉或熟鹦鹉肉。</li><li>新增番茄酱，使用西红柿、糖和盐瓶合成，恢复5点饥饿值。</li><li>新增奶酪，使用牛奶桶和柠檬无序合成，恢复5点饥饿值。</li><li>新增汉堡，使用番茄酱、奶酪、西红柿、牛排和面包无序合成，恢复20点饥饿值。</li><li>新增披萨，使用番茄酱、奶酪、西红柿、熟猪排和小麦无序合成，恢复5点饥饿值。</li><li>新增寿司，使用干海带、小麦和生鲑鱼无序合成，恢复5点饥饿值。</li><li>新增仰望星空派，使用熟鳕鱼、熟猪排、棕色蘑菇和小麦合成，恢复16点饥饿值。</li><li>新增烤鸡，使用熟鸡肉、柠檬和烤马铃薯合成，恢复16点饥饿值。</li><li>新增饺子，使用熟猪排或熟牛排和8小麦合成得到4个，恢复5点饥饿值。</li><li>新增25种可食用的水果。</li><li>新增葡萄干，烧炼葡萄/金葡萄得到，食用后获得10秒速度。</li><li>现在冷饮可恢复5点魔力值。</li><li>新增稀有掉落物可用于酿造。</li><li>修改连锁算法，现在只破坏镐子可挖掘的方块了。</li><li>新增花草替代作物，成熟后破坏得到花草。</li><li>新增花草烧炼成对应物。</li><li>新增花草合成为3个对应种子。</li><li>修改羊毛树掉落羊毛树树苗、鱼和羊。</li><li>移除水果树树苗、矿石树树苗、羊毛树树苗的合成配方。</li><li>新增圣诞花，使用虞美人、彼岸花、金盏花和碎璃草无序合成。</li><li>新增圣诞树，使用4荧石粉、2雪球、2圣诞花和云杉树苗合成。</li><li>现在漂浮时可按下shift下降。</li><li>修改扫帚和流星丸需要跳跃才可漂浮，移除主手效果。</li><li>新增魔法，包括召唤术：风火雷雨灵，催化术：风火雷雨灵地。</li><li>若要使用魔法，玩家需要副手持有魔杖，然后按下对应的键，最后双击F发动，玩家需要拥有足够的魔法值方可。</li><li>新增出生点附近生成魔导石，每秒恢复32米内玩家1点魔法值，上限30点。</li><li>新增4级星标上的信标增强仪每秒恢复64米内玩家1点魔法值，上限60点。</li><li>新增4级星标上的信标增强仪，若顶层基座使用5日石和4月石，每秒恢复128米内玩家1点魔法值，上限100点。</li><li>现在头饰可直接佩戴。</li><li>新增紫色美瞳，戴上后显示玩家附近的野生花草。</li><li>新增花环每10秒恢复玩家1点魔法值，上限30点。</li><li>新增原谅帽每10秒恢复玩家1点魔法值，上限60点。</li><li>新增冕旒每10秒恢复玩家1点魔法值，上限100点。</li><li>新增烈焰红唇、愚弄眼镜、小黄人眼罩。</li><li>新增经典画作，使用羽毛、黑色染料和画无序合成。</li><li>将经典画作放置在物品展示框上，会随机显示33种画的一种。</li><li>新增彩色告示牌。</li><li>新增玻璃物品展示框，使用玻璃板和8个木棍合成。放入物品后变透明。</li><li>修改合成楼梯数量为4个，楼梯回收为4个。</li>
 <li>现在可使用切石机切割木板。</li>
 <li>移除平滑方块的合成和加速效果。</li><li>将实用功能部分分离为发射器种植、下界干燥湿海绵、复合台阶、随机方块、箱子排序、炼药锅功能。</li><li>新增炼药锅漂白羊毛、床、粘性活塞。</li><li>修改了随机方块功能为：副手持有潜影箱而主手为空时，将会从潜影箱随机选择一个给予玩家。</li><li>修改箱子排序为只需主手或副手持有木棍即可。</li><li>修改箱子排序算法，现在支持大箱子且可以满槽位。</li><li>移除竖台阶，修改墙名称为竖台阶和模型。</li>
 <li>现在复合台阶拥有完整碰撞箱且破坏后全部掉落。</li><li>修改双台阶模型材质为竖纹。</li><li>修改末影龙掉落龙蛋方块而不是龙头。</li><li>修改村民代码以支持1.14。</li><li>为村民出售的食物添加了饱食度显示。</li><li>制图师现在可以出售各种结构的地图了，使用月之碎片购买。与所在维度有关，若无相应结构则无效。</li><li>修改了tcp的logo。</li>
@@ -6006,7 +6031,7 @@ scoreboard players set #rituals_time cppValue 1200
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-01-31</p>
+<p>最后更新 2019-02-15</p>
 </footer>
 </article>
 </body></html>
