--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <p>原版模组一般是指使用命令而非<abbr title="forge liteloader rift fibric 等">mod api</abbr>来对游戏的可玩性做出修改。自1.13起，原版模组一般以数据包的形式出现。</p>
 
 <p>《更多的合成》是国内论坛最大的原版模组，包括数百种物品、材料、工具、装饰等，以及新的村民交易和空岛系统。该模组无明确的主题，凡是作者认为原版没有而应该有的特性都有可能加入进来。</p>
-<p>最新版本为测试版v1.9-m02d15(魔法更新)，支持Minecraft Java版 1.14快照19w07a+。</p>
+<p>最新版本为测试版v1.9-m02d21(魔法更新)，支持Minecraft Java版 1.14快照19w08a+。</p>
 
 
 <h3 id="download">📦 下载地址</h3>
@@ -69,9 +69,9 @@
 <tbody>
 <tr>
 	<td>Minecraft Java版 19w05a+</td>
-	<td>Crafting++ 1.9测试版m02d15</td>
-	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m02d15.zip">github</a>
-      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m02d15.zip">官方</a></td>
+	<td>Crafting++ 1.9测试版m02d21</td>
+	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/v1.9-m02d21.zip">github</a>
+      | <a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9-m02d21.zip">官方</a></td>
 	<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/raw/master/versions/1.9/change.log">更新日志</a></td>
 </tr>
 <tr>
@@ -123,7 +123,8 @@
 <p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree 折君 天狼星black 匠魂 Gingerbread MC先生</p>
 <p><span style="font-weight:bold;">服务器支持</span>：HerobrineXia SorrowRain 苹果果</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
-<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">一米八微笑 明月庄主 Rhythm萱 墨鱼 uuu2011 火星浮云 这是彩虹糖呢 倪采臣 SPGoding ustc_zzzz 苹果果 落天望月 猫君 chyx switefaster</span></p>
+<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">一米八微笑 明月庄主 Rhythm萱 LIXIAOGANG 墨鱼 uuu2011 火星浮云 这是彩虹糖呢 倪采臣 SPGoding ustc_zzzz 苹果果 落天望月 猫君 chyx switefaster</span></p>
+<!--一米八微笑 250 明月庄主 200 Rhythm萱 128 LIXIAOGANG 96 墨鱼 86 uuu2011 66 火星浮云 64 这是彩虹糖呢 48 倪采臣 32 SPGoding ustc_zzzz 苹果果 落天望月 猫君 chyx switefaster-->
 <p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL小组</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP小组</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV小组</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG小组</a>等小组以及<a href="http://www.mcbbs.net/?1963599">pineapple_</a>、<a href="http://www.mcbbs.net/?160123">贰逼</a>、ECS、<a href="https://github.com/pca006132">pca</a>、<a href="http://www.mcbbs.net/?720449">玄素</a>、<a href="http://www.mcbbs.net/?582040">chyx</a>、<a href="https://github.com/ustc-zzzz">zzzz_ustc</a>、<a href="http://www.mcbbs.net/?1073223">乙烯_中国</a>、<a href="https://github.com/switefaster">switefaster</a>、折君、<a href="http://www.mcbbs.net/?725858">⊙v⊙</a>、Herobrinexia、Amber等玩家亦对此模组有贡献。</p>
 <p style="color:blue;">感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
@@ -184,6 +185,7 @@
   <a href="#crafting_machine"><span class="ci" style="background-position: -32px -592px;"></span>合成器</a> 
 · <a href="#all_in_one_machine"><span class="ci" style="background-position: -16px -0px;"></span>多功能一体机</a> 
 · <a href="#trade_machine"><span class="ci" style="background-position: -32px -0px;"></span>交易机</a>
+· <a href="#compress_craft_machine"><span class="ci" style="background-position: -0px -624px;"></span>压缩合成机</a>
 · <a href="#mob_projector"><span class="ci" style="background-position: -48px -0px;"></span>生物投影仪</a>
 · <a href="#beacon_enhancer"><span class="ci" style="background-position: -64px -0px;"></span>信标增强器</a>
 · <a href="#golden_anvil"><span class="ci" style="background-position: -80px -0px;"></span>金砧</a>
@@ -288,6 +290,7 @@
 · <a href="#coordinate_recorder"><span class="ci" style="background-position: -112px -144px;"></span>坐标记录仪</a> 
 · <a href="#grafter"><span class="ci" style="background-position: -128px -144px;"></span>剪枝器</a> 
 · <a href="#glass_pickaxe"><span class="ci" style="background-position: -112px -416px;"></span>玻璃镐</a>
+· <a href="#santa_gift"><span class="ci" style="background-position: -32px -624px;"></span>圣诞礼物</a>
 · <a href="#roost"><span class="ci" style="background-position: -16px -592px;"></span>鸡窝</a>
 · <a href="#flags"><span class="ci" style="background-position: -0px -576px;"></span><span class="ci" style="background-position: -16px -576px;"></span><span class="ci" style="background-position: -32px -576px;"></span><span class="ci" style="background-position: -48px -576px;"></span><span class="ci" style="background-position: -64px -576px;"></span>旗帜</a>
 · <a href="#logos"><span class="ci" style="background-position: -80px -576px;"></span><span class="ci" style="background-position: -96px -576px;"></span><span class="ci" style="background-position: -112px -576px;"></span><span class="ci" style="background-position: -128px -576px;"></span><span class="ci" style="background-position: -144px -592px;"></span>标志</a>
@@ -438,6 +441,7 @@
 · <a href="#blue_jeans"><span class="ci" style="background-position: -32px -416px;"></span>牛仔裤</a> 
 · <a href="#snow_boots"><span class="ci" style="background-position: -48px -416px;"></span>雪地靴</a> 
 · <a href="#classical_painting"><span class="ci" style="background-position: -64px -416px;"></span>经典画作</a> 
+· <a href="#spring_festival_decorations"><span class="ci" style="background-position: -16px -624px;"></span>新春装饰</a> 
 · <a href="#bedsheet"><span class="ci" style="background-position: -96px -608px;"></span>
 <span class="ci" style="background-position: -112px -608px;"></span>
 <span class="ci" style="background-position: -128px -608px;"></span>床单</a> 
@@ -503,7 +507,7 @@
 <h2 id="entities">实体</h2>
 <h3 id="improved_mob">怪物加强</h3>
 <ul>
-<li>僵尸：有更高的几率生成时身穿盔甲、手持武器。</li>
+<li>僵尸：有更高的几率生成时身穿盔甲、手持武器。同时会破坏遇到的火把。</li>
 <li>骷髅：有更高的几率生成时身穿盔甲、射出药箭。</li>
 <li>爬行者：爆炸前的引线时间更短。高压爬行者有一定几率天然生成。</li>
 </ul>
@@ -1052,7 +1056,7 @@
 </span></span><span class="ui slot"><span class="xp_orb" title="经验"><span class="stack">32</span></span></span></td></tr>
 <tr><td>掠夺者(43.75%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/5/5a/PillagerFace.png" title="掠夺者" /></td></tr>
 <tr><td>唤魔者(6.25%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/5/58/Evoker_Head.png" title="唤魔者" /></td></tr>
-<tr><td>掠夺兽(6.25%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/1/1a/IllagerBeastFace.png" title="掠夺兽" /></td></tr>
+<tr><td>劫掠兽(6.25%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/1/1a/IllagerBeastFace.png" title="劫掠兽" /></td></tr>
 
 <tr><td>守卫者(93.75%)</td><td><img src="https://gamepedia.cursecdn.com/minecraft_zh_gamepedia/e/e6/GuardianFace.png" title="守卫者" /></td><td rowspan="2"><span class="ui slot"><span class="egg" title="鸡蛋">
 </span></span><span class="ui slot"><span class="water_bottle" title="水瓶">
@@ -1151,13 +1155,13 @@
 <span class="ui single"><span class="ci golden_anvil"></span></span>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>金砧</th>
-<td><a href="#enchanted_gold">附魔金锭</a>+铁砧+箱子</td>
+<td><a href="#enchanted_gold">附魔金锭</a>+铁砧+木桶</td>
 <td><span class="ui cm" title="合成器">
 <span class="ci enchanted_gold" title="附魔金锭"></span>
 <span class="anvil" title="铁砧"></span>
 <span class="ci enchanted_gold" title="附魔金锭"></span>
 <span class="ci enchanted_gold" title="附魔金锭"></span>
-<span class="chest" title="箱子"></span>
+<span class="barrel" title="木桶"></span>
 <span class="ci enchanted_gold" title="附魔金锭"></span>
 <span class="ci enchanted_gold" title="附魔金锭"></span>
 <span class="ci enchanted_gold" title="附魔金锭"></span>
@@ -2181,7 +2185,7 @@
 <table><thead><tr><th>产物</th><th colspan="2">配方</th></tr></thead><tbody>
 <tr><th rowspan="3">绿宝石粉</th><td>绿宝石+燧石<td>
 <span class="ui aiom hn1" title="多功能一体机 常温高压模式">
-<span class="diamond" title="钻石"></span>
+<span class="emerald" title="绿宝石"></span>
 <span class="flint" title="燧石"></span>
 <span class="ci emerald_dust" title="绿宝石粉"></span>
 <span class="empty"></span>
@@ -2747,7 +2751,7 @@
 </tbody></table>
 <h3 id="portable_crafting_machine">便携式合成器 (Portable Crafting Machine)</h3>
 <span class="ui single"><span class="ci portable_crafting_machine"></span></span>
-<p>右击可放置一个<a href="#crafting_machine">合成器</a>，玩家离开后会自动消失。</p>
+<p>右击可放置一个<a href="#crafting_machine">合成器</a>，玩家离开后会自动消失（包括其中的物品也会消失）。</p>
 <table><thead><tr><th>产物</th><th>材料</th><th>合成配方</th></tr></thead><tbody>
 <tr><th>便携式合成器</th><td>工作台+<a href="#experience_bottle">附魔之瓶</a></td>
 <td><span class="ui cm" title="合成器">
@@ -2939,6 +2943,10 @@
 <span class="ci glass_pickaxe" title="玻璃镐"></span>
 </span></td></tr>
 </tbody></table>
+
+<h3 id="santa_gift">圣诞礼物 (Santa Gift)</h3>
+<span class="ui single"><span class="ci santa_gift"></span></span>
+<p>从<a href="#trade">圣诞老人</a>处可购买，打开后可随机获得鞘翅、附魔钻石盔甲/工具/剑、矿物、金苹果、马铠、种子包和<a href="#bedsheet">床单</a>。</p>
 
 <h3 id="roost">鸡窝 (Roost)</h3>
 <span class="ui single"><span class="ci roost"></span></span>
@@ -5262,7 +5270,7 @@
 
 <h3 id="classical_painting">经典画作 (Classical Painting)</h3>
 <span class="ui single"><span class="ci classical_painting"></span></span>
-<p>将经典画作放置在物品展示框上，会随机显示33种画的一种，右键可按次序切换图案。包括：
+<p>放置后，右键可按次序切换图案。包括：
 无名女郎、罗纳河上的星空、蒙娜丽莎、梦、日出印象、
 舞蹈教室、吹笛少年、塔希提岛的牧歌、劳动归来、春光、
 吻、红磨坊舞会、松树林之晨、画家母亲肖像、暴风雨、
@@ -5286,6 +5294,47 @@
 <span class="empty"></span>
 <span class="empty"></span>
 <span class="ci classical_painting" title="经典画作"></span>
+<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
+</span></td></tr>
+</tbody></table>
+
+<h3 id="spring_festival_decorations">新春装饰 (Spring Festival Decorations)</h3>
+<span class="ui single"><span class="ci spring_festival_decorations"></span></span>
+<p>放置后，右键可按次序切换图案。包括<br />
+日出江花红胜火 春来江水绿如蓝<br />
+爆竹声声辞旧岁 春联户户迎新春<br />
+一年四季行好运 八方财宝进家门<br />
+迎新春平安如意 贺佳节富贵平安<br />
+旧岁又添几个喜 新年更上一层楼<br />
+绿竹别其三分景 红梅正报万家春<br />
+天增岁月人增寿 春满乾坤福满楼<br />
+喜居宝地千年旺 福照家门万事兴<br />
+鸟语花香 万象更新<br />
+四季平安 国泰民安<br />
+辞旧迎新 春回大地<br />
+四季长安 喜迎新春<br />
+春 福 五谷丰登 六畜兴旺<br />
+<img src="items/image/spring_couplets.png" style="width:920px;" /><br />
+<img src="items/image/spring.png" style="height:60px;" />
+<img src="items/image/happiness.png" style="height:60px;" />
+<img src="items/image/harvest.png" style="height:60px;" />
+<img src="items/image/prosperous.png" style="height:60px;" />
+</p>
+
+<table><thead><tr><th>名称</th><th>材料</th><th>合成配方</th></tr></thead>
+<tbody>
+<tr><th>新春装饰</th><td>羽毛+黑色染料+红色染料+纸</td>
+<td><span class="ui cm" title="合成器">
+<span class="feather" title="羽毛"></span>
+<span class="black_dye" title="黑色染料"></span>
+<span class="red_dye" title="红色染料"></span>
+<span class="paper" title="纸"></span>
+<span class="empty"></span>
+<span class="empty"></span>
+<span class="empty"></span>
+<span class="empty"></span>
+<span class="empty"></span>
+<span class="ci spring_festival_decorations" title="新春装饰"></span>
 <span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 </span></td></tr>
 </tbody></table>
@@ -5478,7 +5527,7 @@
 <p>湿海绵在下界可直接被干燥为海绵。</p>
 <!------------------------------------------------------------------------------------------------>
 <h2 id="trade">交易</h2>
-<p>新增了9种村民。现在制图师可以出售所有结构的地图，使用<a href="#moon_shard">月之碎片</a>购买，在下界/末地可以购买下界要塞/末地城地图，超平坦模式下无效。</p>
+<p>新增了8种村民。现在制图师可以出售所有结构的地图，使用<a href="#moon_shard">月之碎片</a>购买，在下界/末地可以购买下界要塞/末地城地图，超平坦模式下无效。</p>
 <img style="height:400px;" src="items/villager/banner.png" />
 <table style="width:100%;">
 <thead><tr><th colspan="2">职业</th><th style="width:40px;">层级</th><th>买</th><th>卖</th></tr></thead>
@@ -5495,25 +5544,7 @@
 <tr><td style="text-align:center">2-4 绿宝石</td><td style="text-align:center">丛林树苗</td></tr>
 <tr><td style="text-align:center">2-4 绿宝石</td><td style="text-align:center">金合欢树苗</td></tr>
 <tr><td style="text-align:center">2-4 绿宝石</td><td style="text-align:center">深色橡木树苗</td></tr>
-
-<tr><th rowspan="4"><img src="items/villager/painter.png" style="height:100px;"/></th><th rowspan="4">书画师</th><th rowspan="3">1</th><td style="text-align:center">24-36 纸</td><td style="text-align:center">绿宝石</td></tr>
-<tr><td style="text-align:center">36-40 红色染料</td><td style="text-align:center">绿宝石</td></tr>
-<tr><td style="text-align:center">36-40 黑色染料</td><td style="text-align:center">绿宝石</td></tr>
-<tr><th rowspan="1">2</th><td style="text-align:center">7-11 绿宝石</td><td style="text-align:center">TCP 图标<sup>[1]</sup><br/>
-日出江花红胜火 春来江水绿如蓝<br/>
-爆竹声声辞旧岁 春联户户迎新春<br/>
-一年四季行好运 八方财宝进家门<br/>
-迎新春平安如意 贺佳节富贵平安<br/>
-旧岁又添几个喜 新年更上一层楼<br/>
-绿竹别其三分景 红梅正报万家春<br/>
-天增岁月人增寿 春满乾坤福满楼<br/>
-喜居宝地千年旺 福照家门万事兴<br/>
-鸟语花香 万象更新<br/>
-四季平安 国泰民安<br/>
-辞旧迎新 春回大地<br/>
-四季长安 喜迎新春<br/>春 福 五谷丰登 六畜兴旺</td></tr>
-
-<tr><th style="width:50px;"><img src="items/villager/santa_claus.png" style="height:100px;"/></th><th style="width:70px;">圣诞老人</th><th>-</th><td style="text-align:center">皮革靴子+1-64 绿宝石</td><td style="text-align:center">圣诞礼物<sup>[2]</sup></td></tr>
+<tr><th style="width:50px;"><img src="items/villager/santa_claus.png" style="height:100px;"/></th><th style="width:70px;">圣诞老人</th><th>-</th><td style="text-align:center">皮革靴子+<a href="#moon_shard">月之碎片</a></td><td style="text-align:center"><a href="#santa_gift">圣诞礼物</a></td></tr>
 
 <tr><th rowspan="6"><img src="items/villager/pharmacist.png" style="height:100px;"/></th><th rowspan="6">药剂师</th><th rowspan="4">1</th><td style="text-align:center">15-19 地狱疣</td><td style="text-align:center">绿宝石</td></tr>
 <tr><td style="text-align:center">15-19 蜘蛛眼</td><td style="text-align:center">绿宝石</td></tr>
@@ -5528,7 +5559,7 @@
 
 <tr><th rowspan="3"><img src="items/villager/fireworker.png" style="height:100px;"/></th><th rowspan="3" style="width:50px">烟花师</th><th rowspan="2" style="width:20px">1</th><td style="text-align:center">24-36 纸</td><td style="text-align:center">绿宝石</td></tr>
 <tr><td style="text-align:center">36-40 火药</td><td style="text-align:center">绿宝石</td></tr>
-<tr><th>2</th><td style="text-align:center">1 绿宝石</td><td style="text-align:center">3-5烟花火箭<sup>[3]</sup></td></tr>
+<tr><th>2</th><td style="text-align:center">1 绿宝石</td><td style="text-align:center">3-5烟花火箭 (为双层球状，颜色随机)</td></tr>
 
 <tr><th rowspan="9"><img src="items/villager/gardener.png" style="height:100px;"/></th><th rowspan="9">园丁</th><th rowspan="1">1</th><td style="text-align:center">36-40 骨粉</td><td style="text-align:center">绿宝石</td></tr>
 <tr><th rowspan="8">2</th><td style="text-align:center">3-5 绿宝石</td><td style="text-align:center">红色郁金香</td></tr>
@@ -5558,17 +5589,6 @@
 <tr><td style="text-align:center">热带鱼+12-20 绿宝石</td><td style="text-align:center">热带鱼桶</td></tr>
 <tr><td style="text-align:center">河鲀+12-20 绿宝石</td><td style="text-align:center">河鲀桶</td></tr>
 
-<tr><td colspan="5">
-[1] 对联和横批共8种样式：<br />
-<img src="items/image/spring_couplets.png" style="width:920px;" /><br />
-<img src="items/image/spring.png" style="height:60px;" />
-<img src="items/image/happiness.png" style="height:60px;" />
-<img src="items/image/harvest.png" style="height:60px;" />
-<img src="items/image/prosperous.png" style="height:60px;" />
-<img src="items/image/tcp_logo.png" style="height:60px;" /><br />
-[2] 打开后可随机获得鞘翅、附魔钻石盔甲/工具/剑、铁盔甲/工具/剑、矿物、食物、马铠、种子和<a href="#bedsheet">床单</a>。<br />
-[3] 为双层球状，颜色随机。<br />
-</td></tr>
 </tbody></table>
 
 
@@ -6031,7 +6051,7 @@ scoreboard players set #rituals_time cppValue 1200
 <a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" /></a>
 </p>
 
-<p>最后更新 2019-02-15</p>
+<p>最后更新 2019-02-21</p>
 </footer>
 </article>
 </body></html>
