--- a/index.html
+++ b/index.html
@@ -5486,7 +5486,7 @@
 <p>当玩家主手/副手持有木棍右击箱子/潜影箱后，箱子内的物品会按照物品id的长度/物品数量从小到大排序。该操作不会合并同名的物品。</p>
 
 <h3 id="dispenser_plant">自动种植</h3>
-<p>当发射器发射的物品可以种植在前方位置时，会自动种植。</p>
+<p>当发射器发射的物品可以种植在前方位置时，会自动种植。支持本模组的树苗和花草。</p>
 <table><thead><tr><th>位置</th><th>作物</th></tr></thead><tbody>
 <tr><td>泥土等上方</td><td>树苗</td></tr>
 <tr><td>耕地上方</td><td>小麦种子、甜菜种子、南瓜种子、西瓜种子、胡萝卜、马铃薯</td></tr>
